homework of 2022.03.14. class

--- a/Web_ Programming/html/1-2.html
+++ b/Web_ Programming/html/1-2.html
@@ -6,6 +6,9 @@
     <body>
         <H2>example 1-2</H2>
         <HR>
-        example 1-2
+        example 1-2<br>
+        Dept: Computer Engineering<br>
+        Student ID: 202035130<br>
+        My name: Kim ye chan
     </body>
 </html>
