--- a/Web_Programming/ch03/03_17.html
+++ b/Web_Programming/ch03/03_17.html
@@ -212,7 +212,7 @@
 
     <h1>이미지 삽입하기</h1>
     <hr>
-    <img src="3.17수업자료/Penguins.jpg" alt="펭귄" width="300">
+    <img src="../3.17수업자료/Penguins.jpg" alt="펭귄" width="300">
     <img src="nothing" alt="그림이 존재하지 않습니다." width="300">
     <hr>
     <br>
@@ -221,11 +221,11 @@
     <hr>
 
     <video controls="contorls" poster="http://via.placeholder.com/640x360">
-        <source src="3.17수업자료/Wildlife.mp4" width="640" heigh="360" type="video/mp4">
-        <source src="3.17수업자료/Wildlife.webm" width="640" heigh="360" type="video/webm">
+        <source src="../3.17수업자료/Wildlife.mp4" width="640" heigh="360" type="video/mp4">
+        <source src="../3.17수업자료/Wildlife.webm" width="640" heigh="360" type="video/webm">
     </video>
 
-    <video src="3.17수업자료/Wildlife.mp4" width="640" heigh="360" controls="controls" poster="http://via.placeholder.com/640x360"></video>
+    <video src="../3.17수업자료/Wildlife.mp4" width="640" heigh="360" controls="controls" poster="http://via.placeholder.com/640x360"></video>
 
 </body>
 
