--- a/Web_Programming/ch06/border_basic.html
+++ b/Web_Programming/ch06/border_basic.html
@@ -1,24 +1,13 @@
 <!DOCTYPE html>
-
 <html>
 
 <head>
-    <title>CSS Property Basic</title>
+    <title>CSS3 Property Basic</title>
     <style>
-        div {
-            width: auto;
-            height: 100px;
-            background-color: red;
-            border: 20px solid black;   
-            margin: 0px 30px;
-            padding: auto auto;
-        }
-
         .box {
             border-width: thick;
             border-style: dashed;
             border-color: black;
-            border-radius: 20px;
         }
     </style>
 </head>
