--- a/Web_Programming/ch09/condition_duplication.html
+++ b/Web_Programming/ch09/condition_duplication.html
@@ -11,16 +11,24 @@
         //조건문
         if (hours < 5)
             alert('잠을 자령...');
-        else if (hours < 7)
-            alert('준비');
-        else if (hours < 9)
-            alert('출근');
-        else if (hours < 12)
-            alert('빈둥빈둥');
-        else if (hours < 14)
-            alert('식사');
-        else
-            alert('종강');
+        else {
+            if (hours < 7)
+                alert('준비');
+            else {
+                if (hours < 9)
+                    alert('출근');
+                else {
+                    if (hours < 12)
+                        alert('빈둥빈둥');
+                    else {
+                        if (hours < 14)
+                            alert('식사');
+                        else
+                            alert('종강');
+                    }
+                }
+            }
+        }
     </script>
 </head>
 
