--- a/Web_Programming/homework/소울마스터.html
+++ b/Web_Programming/homework/소울마스터.html
@@ -1,9 +1,10 @@
+<!-- data source https://namu.wiki/w/%EB%B3%B4%EC%9A%B0%EB%A7%88%EC%8A%A4%ED%84%B0 -->
 <!DOCTYPE html>
 
 <html>
 
 <head>
-    <title>히어로 공략</title>
+    <title>소울마스터 공략</title>
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script>
@@ -146,99 +147,103 @@
             <section id="main-section">
                 <article>
                     <div class="article-header">
-                        <h1 class="article-title">히어로(Hero)</h1>
+                        <h1 class="article-title">소울마스터(Soul Master)</h1>
                     </div>
                     <div class="article-body">
-                        <img id=c_image src="image/히어로.webp" alt="히어로">
+                        <img id="c_image" src="image/소울마스터.webp" alt="소울마스터">
                         <h1 id="title">장점</h1>
                         <p>
-                            <strong>강력한 보스전 성능</strong><br>
-                            보스전에서 화력을 대폭 끌어올리는 인레이지와 자상, 바인드에 걸린 몬스터에게 더 큰 데미지를 주는 찬스 어택, 크리티컬 공격의 피해량을 증가시키는 인사이징
-                            등의 버프로 단일 보스 상대로 강력한 딜을 넣을 수 있다. 5차 스킬 소드 오브 버닝 소울과 콤보 인스팅트는 30레벨 기준 각각 75초, 20초라는 긴 지속시간을
-                            가지고 있는 만큼, 화력의 총량을 엄청나게 끌어올려 히어로가 지속딜링 상위권 안에 들어갈 수 있게 만든다. 인팅-일루전으로 순간 화력을 끌어올릴 경우 10초 극딜
-                            능력도 뛰어나다. 또한 콤보 데스폴트라는 무적시간 1.6초에 재사용 대기시간이 고작 25초밖에 안되는 최상급 무적기를 통해 빠르게 패턴을 회피하고 효율적으로 딜을
-                            넣을 수 있다.
+                            <strong>뛰어난 기본 스펙</strong><br>
+                            자력 최대 공격 속도이며, 자체 바인드와 짧은 쿨 무적기 보유, 기본 크리티컬 확률이 50%로 높고, 솔루나 타임의 효과, 전직마다 강화 효과를 받은 주력기는
+                            데미지가 높아 원킬컷이 낮다. 이 장점은 5차 전직 이전 뿐만 아니라 원킬을 내기 까다로운 상위 사냥터에서도 장점으로 작용된다.
                             <br><br>
-                            <strong>쉽고 간단한 조작 및 운용법</strong><br>
-                            초창기에 나온 직업인만큼 조작 난이도가 매우 단순한데 고유 스킬인 콤보
-                            어택은 온/오프 스킬이라 한번 켜두면 죽지 않는 이상 계속 유지할 수 있고, 평상시에 사용하는 버프 스킬은 스피릿 블레이드, 스카링 소드,
-                            메이플 용사 뿐이라 펫 자동 버프 장착으로 모두 커버가 가능하다. 또한 사냥 주력기, 보스 주력기가 따로 존재하지 않고 레이징 블로우 하나로
-                            통합되어 있기 때문에 어떠한 상황에서든 레이징 블로우를 사용하다가 가끔 다른 스킬을 눌러주면 된다는 점도 조작 난이도를 쉽게 하는 데 일조하고 있다.
+                            <strong>낮은 사냥 피로도</strong><br>
+                            5차 스킬인 코스모스 → 엘리시온 → 소울 이클립스 → 코스모스를 반복하며 사냥하는데, 해당 스킬은 모두 광역기이다. 그리고 설치기인 코스믹 샤워를 주기적으로
+                            관리해주면 된다.
                             <br><br>
-                            <strong>전직업 최고의 최종 데미지 증가량</strong><br>
-                            히어로의 강력한 딜링 능력은 하늘을 찌르는 최종 데미지 증가량에서 나온다. 기본적으로 웨폰 마스터리와 어드밴스드 콤보를 통해 상시 142%를 확보할 수
-                            있으며, 보스전에서는 인레이지 사용으로 인해 202.5%에 도달할 수 있는데, 이 수치는 영구적으로 얻을 수 있는 가장 높은 수치이다. 여기에 소드 일루전 사용 시
-                            8초 동안 추가로 최종뎀을 끌어올 수 있고, 극딜시 콤보 인스팅트와 오라 웨폰 또한 곱해지기에 실전에서 적용되는 수치는 그야말로 하늘을 찌른다. 반면 이렇게 높은
-                            최종 데미지에 대한 역보정으로 보총 데미지는 매우 낮게 설정되어 있고, 크리티컬 데미지도 높은 편이 아닌데, 이는 다시 말하자면 <strong>높은 투자
-                                효율</strong>로 직결된다. 또한 높은 최종데미지 덕분에 전 직업 중에서도 스탯 공격력이 최상위권에 달하는데, 이는 5차 공용 스킬을 사용할때 장점이
-                            된다. 5차 공용 스킬은 어떤 직업이 사용하든 퍼뎀이 통일되어 있기 때문에 기초 능력치가 뛰어난 직업이 이득을 보게 된다. 히어로는 자력으로 최종 데미지를 최소 2배
-                            이상 끌어올릴 수 있기에 5차 공용 스킬의 효율을 최대한 뽑아낼 수 있다.
+                            <strong>간편한 조작 난이도</strong><br>
+                            사냥과 보스를 막론하고 사용하는 스킬 키의 숫자가 많지 않다. 사냥 및 보스 주력기, 그리고 5차 스킬 극딜인 엘리시온을 하나의 스킬 키로 사용할 수 있다. 꾸준히
+                            관리해줘야 하는 버프는 사냥에서 사용하는 코스믹 샤워 정도이며, 보스전에서는 30초마다 트루 사이트와 시그너스 팔랑크스를 꾸준히 사용하여 관리해주고, 준극딜 한정
+                            코스믹 오브를 관리하여 코스모스를 사용하는 것 정도이다.
                             <br><br>
-                            <strong>양질의 유틸리티</strong><br>
-                            25초 주기의 무적기인 콤보 데스폴트, 무릉 등에서 공무/공반 보스를 상대할 때 유용한 매직 크래시, 높은 기동성에 한몫하는 플래시 슬래시 등, 불필요하거나 활용하기
-                            까다로운 기능이 일절 없는 알짜배기만 모여있다.
+                            <strong>쉬운 V 매트릭스 난이도</strong><br>
+                            필수 코어 강화 대상이 3개이므로 V 매트릭스 시스템과 상성이 좋다. 스킬 가짓수도 8개로 유효 코어를 획득하기 쉬운 편이다.
+                            <br><br>
+                            <strong>준수한 파티 시너지 능력</strong><br>
+                            디버프 스킬인 트루 사이트는, 방어율을 감소시키는 수치 자체는 낮지만 자신을 포함한 아군이 디버프 대상에게 가하는 최종 데미지를 증가시킨다. 게다가 하이퍼 스킬의
+                            선택 여부에 따라 방어율 감소량이 추가되는 것은 물론, 흔치 않은 속성 내성 감소까지 추가할 수 있다. 따라서 소울마스터는 파티에서 시너지 딜러로서 각광 받으며 자체
+                            바인드가 있다는 점도 장점으로 작용된다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">단점</h1>
                         <p>
-                            <strong>낮은 기본 크리티컬 확률</strong><br>
-                            기본 크리티컬 확률이 전 직업 최저 수치인 <strong>25%</strong>로 찬스 어택으로 20% 올라가는 것밖에 없다. 때문에 200 이전의 육성 중에
-                            낮은 크리티컬 수치로 인해 원킬컷을 맞추기가 매우 까다롭고 데미지 편차가 상당해서 어떤 직업보다도 크리티컬 확률 수급이 절실하다. 또한 보공 및 방무, 공마 수급만
-                            신경쓰면 되는 대부분의 직업과 달리, 히어로는 추가로 크확 수급까지 꾸준히 계산하며 스탯을 조절해야 한다.
+                            <strong>무적기의 성능 문제</strong><br>
+                            하이퍼 액티브 스킬인 블레이징 어썰트 & 러스터 차지는 무적 판정이지만, 돌진을 하는 특징이 있다. 캐릭터의 위치가 패턴 파훼에 영향을 미치는 선택받은 세렌과 같은
+                            보스에서 파티원에게 민폐를 끼치거나, 리스트레인트 링 사용 도중 이탈할 수 있다. 또한 무적기임에도 돌진 거리가 상당히 길어 패턴 회피에 있어서 위치 설정이 잘못될
+                            우려가 있다. 그 자리에 그나마 사용 후 한번 재사용할 수 있는 여지가 있지만 그에 비해 5초라는 과하게 짧은 제한 시간도 문제다.[22] 때문에 운석이 수시로
+                            떨어지는 매그너스나 스우, 즉사 패턴이 랜덤한 위치에서 등장하는 파풀라투스 같은 보스전에서는 소울마스터의 무적기가 오히려 독이 된다. 리마스터 이전 주력기의 강제
+                            이동을 무적기에 대신 넣었다는 우스갯소리까지 들릴 정도.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">사냥 운용</h1>
                         <p>
-                            보스전과 마찬가지로 워리어 리프-레이징 블로우만 쓰고 다녀도 썩 나쁘지 않은 시간당 처치 수를 기록할 수 있지만, 제대로 빌드를 짜서 많은 처치 수를
-                            뽑아내려면 상단 범위가 우월한 인사이징을 함께 사용하면서 오라 블레이드, 레이지 업라이징, 콤보 데스폴트, 소드 일루전, 블리츠 실드, 에르다 파운틴 같은
-                            광범위 공격기도 곁들여주는 것이 좋다.
+                            <strong>5차 전직 이전</strong><br>
+                            솔루나 타임을 통해 솔라 슬래시&루나 디바이드를 주력 스킬로 사용한다. 낮은 원킬 난이도가 특징이다. 또한 코스믹 스킬로 2차 전직 때는 코스믹 매터, 이후에는
+                            설치기인 코스믹 샤워를 사용한다.
                             <br><br>
-                            특히 몇몇 사냥 빌드의 경우 밑점 직후 거의 동시에 레업라를 사용해 레업라의 후딜을 줄이는 일명 '밑점 레업라'가 필수적으로 요구된다. 이 테크닉은 좌우
-                            방향키가 키다운된 상태여야 하고, 입력 타이밍도 상당히 빡빡해 밑점 혹은 레업라만 발동되는 일이 자주 일어난다. 하지만 그만큼 숙달되면 다양한 사냥터에서 사냥
-                            효율이 꽤나 좋아지므로 많은 마릿수의 사냥 빌드를 사용하고 싶다면 익혀두는 것이 좋다.
+                            <strong>5차 전직 이후</strong><br>
+                            5차 스킬인 코스모스, 엘리시온, 소울 이클립스를 돌아가며 사냥하는 것이 특징이다. 5차 스킬 간 공백 시에는 마찬가지로 솔라 슬래시&루나 디바이드와 코스믹 샤워를
+                            사용한다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">보스전 운용</h1>
                         <p>
-                            쉽고 강하다. 어지간한 스킬들이 죄다 <strong>최종 데미지</strong>에 관여하기도 하고, 조작 난이도도 쉬워서 단순히 공격에만 집중할 수 있어
-                            피로도도 적으며, 무엇보다도 5차 이후 강력한 극딜기와 <strong>무적</strong>을 포함한 유틸기들이 주어지기 때문이다. 따라서 육성 과정을 제외한 자본
-                            투자 대비 효율은 좋다.
+                            <strong>딜 사이클</strong><br>
+                            소울 이클립스, 엘리시온, 코스믹 포지, 코스모스를 동시에 사용한다. 엔버 링크 및 시드링을 사용할 경우, 솔루나 디바이드와 코스모스 지속시간에 맞춰 사용한다.
+                            엘리시온과 코스모스는 재사용 대기시간이 180초, 90초인 만큼 주기를 맞추기 쉽다. 코스믹 포지 없이 단독으로 코스모스를 사용해야 하는 경우 코스믹 오브 5개를
+                            준비해두고 사용해야만 데미지 효율을 극대화할 수 있다.
                             <br><br>
-                            평딜은 인레이지를 켜고, 60초 주기로 인사이징 디버프를 먹이면서 콤보 카운터 완충 후 강화된 레이징 블로우+레이지 업라이징으로 무한 공격하면 된다. 특히
-                            30초마다 소드 일루전 → 레이지 업라이징 순서대로 사용하면 소드 일루전의 효과로 순간적으로 최종 데미지가 증가하므로 듀얼블레이드의 블토카퓨 콤보처럼 꾸준히
-                            누킹을 가할 수 있다.
+                            <strong>트루 사이트</strong><br>
+                            방어율 10% 감소 및 적이 받는 최종 데미지 5%에 추가하는 디버프 스킬이다. 30초간 지속되며 재사용 대기 시간이 존재하지 않아 반드시 상시 유지해야 한다.
+                            파티원 전원에게 적용되는 스킬이기 때문에, 서포터로서의 역할을 할 수 있다. 단, 속성 감소 파티 효과가 있는 직업과는 속성 감소 효과가 중첩이 되지 않아 주의해야
+                            한다.
                             <br><br>
-                            극딜 시에는 상기한 120초 4버프에 추가로 메이플월드 여신의 축복+오라 웨폰(+시드링)를 사용한 뒤 일루전으로 최종뎀 버프를 받고 공용 스킬인 스인미,
-                            크오솔을 쓴 뒤 공간의 상처가 붙은 레이징 블로우를 난사하면 된다.
+                            <strong>소울 페네트레이션</strong><br>
+                            통칭 바인드 스킬이다. 5차 공용 스킬인 에르다 노바가 개편되어 사실상 바인드 평준화가 이루어져 특출난 장점은 아니지만, 자체적으로 바인드를 갖고 있는 것은 여전히
+                            메리트이다.
+                            <br><br>
+                            <strong>블레이징 어썰트 & 러스터 차지</strong><br>
+                            45초 주기의 이동기이자 무적기이다. 한 스킬을 사용할 경우 5초 이내에 다른 스킬로 연계가 가능하다. 사용 시 전방으로 돌진하는 특징이 있는데, 이는 텔레포트
+                            판정이 아니다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">어빌리티</h1>
                         <p>
-                            <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
-                            속칭 보공. 최종 데미지가 높은 대신 총 데미지가 20~25%밖에 되지 않기 때문에 보공 효율이 좋다.
+                            <strong>보스 공격시 데미지 증가</strong><br>
+                            통칭 '보공'. 가장 무난한 첫줄 선택지다.
                             <br><br>
-                            <strong>크리티컬 확률 증가</strong><br>
-                            속칭 크확. 히어로는 기본 크확이 25%로 최저치라 크확이 유달리 절실하다. 유니온 8000 이상의 경우, 하이퍼스킬 / 링크 스킬 / 농장 등을 총동원하면
-                            어빌리티 없어도 100% 달성이 불가능한 것은 아니지만, 어빌리티에 크확이 있으면 세팅이 매우 편해진다. 투자할 자본 수준에 따라서는 1번째 줄에 띄워 쓰기도
-                            한다.
+                            <strong>상태 이상에 걸린 대상 공격 시 데미지 % 증가</strong><br>
+                            통칭 '상추뎀'. 트루 사이트로 조건을 만족한다. 2~3째 줄에 주로 뽑는다.
                             <br><br>
-                            <strong>상태 이상에 걸린 적 공격 시 데미지 증가</strong><br>
-                            속칭 상추뎀. 스카링 소드의 자상과 인사이징의 디버프가 상태 이상으로 판정되므로, 사실상 추가 보공이라고 봐도 무방하다. 레전드리의 경우 10%밖에 붙지 않아
-                            효과가 윗줄 보공의 절반에 불과하므로, 둘째 줄 아래에서 유니크로 달게 된다.
+                            <strong>크리티컬 확률 증가.</strong><br>
+                            통칭 '크확'. 소울마스터의 기본 크리티컬 확률은 50% 정도로 중간 수준이다. 보통 2~3째 줄에서 20%를 노린다.
+                            <br><br>
+                            <strong>아이템 드롭률 혹은 메소 획득량 증가.</strong><br>
+                            광부용 어빌리티로 카룻돌이용 소마에게 주면 좋다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
-                            이징 블로우, 파이널 어택, 레이지 업라이징, 발할라
+                            솔라 슬래시/루나 디바이드, 코스믹 버스트, 코스믹 샤워
                             <br><br>
                             <strong>2순위</strong><br>
-                            인사이징, 오라 블레이드
+                            솔루나 슬래시, 라우드 러쉬/사일런트 무브, 블레이징 어썰트/러스터 차지
                         </p>
                     </div>
                 </article>
@@ -247,23 +252,14 @@
             <!-- 본문 우측 영역 -->
             <aside id="main-aside">
                 <div class="aside-list">
-                    <h3>모험가</h3>
+                    <h3>시그너스 기사단</h3>
                     <ul>
-                        <li><a href="히어로.html">히어로</a></li>
-                        <li><a href="팔라딘.html">팔라딘</a></li>
-                        <li><a href="다크나이트.html">다크나이트</a></li>
-                        <li><a href="아크메이지(불,독).html">아크메이지(불,독)</a></li>
-                        <li><a href="아크메이지(썬,콜).html">아크메이지(썬,콜)</a></li>
-                        <li><a href="비숍.html">비숍</a></li>
-                        <li><a href="보우마스터.html">보우마스터</a></li>
-                        <li><a href="신궁.html">신궁</a></li>
-                        <li><a href="패스파인더.html">패스파인더</a></li>
-                        <li><a href="나이트로드.html">나이트로드</a></li>
-                        <li><a href="섀도어.html">섀도어</a></li>
-                        <li><a href="듀얼블레이드.html">듀얼블레이드</a></li>
-                        <li><a href="바이퍼.html">바이퍼</a></li>
-                        <li><a href="캡틴.html">캡틴</a></li>
-                        <li><a href="캐논슈터.html">캐논슈터</a></li>
+                        <li><a href="소울마스터.html">소울마스터</a></li>
+                        <li><a href="미하일.html">미하일</a></li>
+                        <li><a href="플레임위자드.html">플레임위자드</a></li>
+                        <li><a href="윈드브레이커.html">윈드브레이커</a></li>
+                        <li><a href="나이트워커.html">나이트워커</a></li>
+                        <li><a href="스트라이커.html">스트라이커</a></li>
                     </ul>
                 </div>
             </aside>
