--- a/Web_Programming/homework/신궁.html
+++ b/Web_Programming/homework/신궁.html
@@ -1,9 +1,10 @@
+<!-- data source https://namu.wiki/w/%EB%B3%B4%EC%9A%B0%EB%A7%88%EC%8A%A4%ED%84%B0 -->
 <!DOCTYPE html>
 
 <html>
 
 <head>
-    <title>히어로 공략</title>
+    <title>신궁 공략</title>
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script>
@@ -146,99 +147,86 @@
             <section id="main-section">
                 <article>
                     <div class="article-header">
-                        <h1 class="article-title">히어로(Hero)</h1>
+                        <h1 class="article-title">신궁(Marksman)</h1>
                     </div>
                     <div class="article-body">
-                        <img id=c_image src="image/히어로.webp" alt="히어로">
+                        <img id="c_image" src="image/신궁.webp" alt="신궁">
                         <h1 id="title">장점</h1>
                         <p>
-                            <strong>강력한 보스전 성능</strong><br>
-                            보스전에서 화력을 대폭 끌어올리는 인레이지와 자상, 바인드에 걸린 몬스터에게 더 큰 데미지를 주는 찬스 어택, 크리티컬 공격의 피해량을 증가시키는 인사이징
-                            등의 버프로 단일 보스 상대로 강력한 딜을 넣을 수 있다. 5차 스킬 소드 오브 버닝 소울과 콤보 인스팅트는 30레벨 기준 각각 75초, 20초라는 긴 지속시간을
-                            가지고 있는 만큼, 화력의 총량을 엄청나게 끌어올려 히어로가 지속딜링 상위권 안에 들어갈 수 있게 만든다. 인팅-일루전으로 순간 화력을 끌어올릴 경우 10초 극딜
-                            능력도 뛰어나다. 또한 콤보 데스폴트라는 무적시간 1.6초에 재사용 대기시간이 고작 25초밖에 안되는 최상급 무적기를 통해 빠르게 패턴을 회피하고 효율적으로 딜을
-                            넣을 수 있다.
+                            <strong>스킬들의 긴 X축 사정거리</strong><br>
+                            주력 스킬인 피어싱의 사거리가 710px, 스나이핑의 사거리가 730px, 차지드 애로우는 1300px 이상으로 길다. 이 정도의 압도적 사거리 차이는 아예 보스들의
+                            패턴 범위 밖에서 딜링을 할 수 있을 정도가 되기 때문에, 딜효율이 크게 상승하고 생존성도 좋아지는 등 단순 편의성 증대 이상의 효과를 불러온다.
                             <br><br>
-                            <strong>쉽고 간단한 조작 및 운용법</strong><br>
-                            초창기에 나온 직업인만큼 조작 난이도가 매우 단순한데 고유 스킬인 콤보
-                            어택은 온/오프 스킬이라 한번 켜두면 죽지 않는 이상 계속 유지할 수 있고, 평상시에 사용하는 버프 스킬은 스피릿 블레이드, 스카링 소드,
-                            메이플 용사 뿐이라 펫 자동 버프 장착으로 모두 커버가 가능하다. 또한 사냥 주력기, 보스 주력기가 따로 존재하지 않고 레이징 블로우 하나로
-                            통합되어 있기 때문에 어떠한 상황에서든 레이징 블로우를 사용하다가 가끔 다른 스킬을 눌러주면 된다는 점도 조작 난이도를 쉽게 하는 데 일조하고 있다.
+                            <strong>간결한 딜링 매커니즘</strong><br>
+                            보스전에서는 스나이핑과 차지드 애로우로 딜링을 하면서 쿨이 돌아올 때 마다 리피팅 크로스보우 카트리지와 스플릿 애로우를 사용하는게 끝이며 복잡한 게이지나 연계가
+                            존재하지 않는다. 여기에 더해 차지드 애로우는 풀차지 후 발사까지 상당한 유예시간이 주어지며, 리피팅 크로스보우 카트리지도 60초간 8발의 화살을 원하는 시점에 쏠
+                            수 있기 때문에, 보스의 패턴에 맞춰 적절한 딜타임을 기다린 후 사용할 수 있다. 이로 인해 스킬이 빗나간다거나 딜 사이클이 꼬이는 등의 이유로 DPM이 하락하게 될
+                            일이 없다.
                             <br><br>
-                            <strong>전직업 최고의 최종 데미지 증가량</strong><br>
-                            히어로의 강력한 딜링 능력은 하늘을 찌르는 최종 데미지 증가량에서 나온다. 기본적으로 웨폰 마스터리와 어드밴스드 콤보를 통해 상시 142%를 확보할 수
-                            있으며, 보스전에서는 인레이지 사용으로 인해 202.5%에 도달할 수 있는데, 이 수치는 영구적으로 얻을 수 있는 가장 높은 수치이다. 여기에 소드 일루전 사용 시
-                            8초 동안 추가로 최종뎀을 끌어올 수 있고, 극딜시 콤보 인스팅트와 오라 웨폰 또한 곱해지기에 실전에서 적용되는 수치는 그야말로 하늘을 찌른다. 반면 이렇게 높은
-                            최종 데미지에 대한 역보정으로 보총 데미지는 매우 낮게 설정되어 있고, 크리티컬 데미지도 높은 편이 아닌데, 이는 다시 말하자면 <strong>높은 투자
-                                효율</strong>로 직결된다. 또한 높은 최종데미지 덕분에 전 직업 중에서도 스탯 공격력이 최상위권에 달하는데, 이는 5차 공용 스킬을 사용할때 장점이
-                            된다. 5차 공용 스킬은 어떤 직업이 사용하든 퍼뎀이 통일되어 있기 때문에 기초 능력치가 뛰어난 직업이 이득을 보게 된다. 히어로는 자력으로 최종 데미지를 최소 2배
-                            이상 끌어올릴 수 있기에 5차 공용 스킬의 효율을 최대한 뽑아낼 수 있다.
+                            <strong>간편한 코어 강화</strong><br>
+                            보스는 스나이핑, 사냥은 피어싱으로만 해결한다. 따라서 신궁은 3줄 코어라는 개념이 없으며 강화 코어는 피어싱과 스나이핑만 몰아주면 마지막 스킬은 뭐가 나와도 모두
+                            유효 코어가 된다. 코어 칸이 부족해 2중 코어를 강요당하는 직업과 달리 신궁은 2중 코어가 필수적이지 않아 코어 마련이 간편하고 강화 비용도 매우 저렴하다. 거기에
+                            강화 코어 개수가 전 직업 중 가장 적은 7개라 피어싱+스나이핑이 겹쳐있는 2줄 코어를 뽑기가 무척 쉽다. 나머지 빈 공간은 다른 스킬로 메우기도 하나, 볼트
+                            스위프트/프리져의 경우 볼트 스위프트는 사용 빈도가 높지 않고 프리져는 소환수라 귀찮으며, 롱 레인지 트루샷/애로우 일루전의 경우 롱 레인지 트루샷은 원킬컷이 낮고
+                            애로우 일루전은 설치기이지만 4차 스킬이라 데미지 증가량이 2%이다. 거기다가 파이널 어택도 속사류 공격이 아니기도 하고 어드밴스드 파이널 어택도 없기 때문에
+                            점유율이 낮아서 강화할 필요가 없다.
                             <br><br>
-                            <strong>양질의 유틸리티</strong><br>
-                            25초 주기의 무적기인 콤보 데스폴트, 무릉 등에서 공무/공반 보스를 상대할 때 유용한 매직 크래시, 높은 기동성에 한몫하는 플래시 슬래시 등, 불필요하거나 활용하기
-                            까다로운 기능이 일절 없는 알짜배기만 모여있다.
+                            <strong>낮은 어빌리티 의존도</strong><br>
+                            궁수답게 기본 크확이 높고 벞지가 필요 없으며, 다수기 타겟 수 증가같은 옵션도 쓰지 않는다. 공속 어빌리티나 패시브 레벨 증가 등 유용한 옵션이 있으나 코어 칸이
+                            남아돌기 때문에 쓸윈부와 쓸컴뱃으로 충분히 대체할 수 있다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">단점</h1>
                         <p>
-                            <strong>낮은 기본 크리티컬 확률</strong><br>
-                            기본 크리티컬 확률이 전 직업 최저 수치인 <strong>25%</strong>로 찬스 어택으로 20% 올라가는 것밖에 없다. 때문에 200 이전의 육성 중에
-                            낮은 크리티컬 수치로 인해 원킬컷을 맞추기가 매우 까다롭고 데미지 편차가 상당해서 어떤 직업보다도 크리티컬 확률 수급이 절실하다. 또한 보공 및 방무, 공마 수급만
-                            신경쓰면 되는 대부분의 직업과 달리, 히어로는 추가로 크확 수급까지 꾸준히 계산하며 스탯을 조절해야 한다.
+                            <strong>빈약한 생존력</strong><br>
+                            주력기인 스나이핑과 극딜기인 리피팅 크로스보우 카트리지의 액션 딜레이가 크고, 더블 점프 외의 할 이동기가 전무하여 기동성도 떨어진다. 게다가 유일한 무적기인 트루
+                            스나이핑은 딜 압축 극딜기로 부각되는 바람에 순수 무적기로 쓰기도 곤란하다. 게다가 의지가 1개 더 있는 대가로 상태이상 내성도 낮아서 상위 보스에서 쏟아지는
+                            상태이상에서 스트레스를 받기도 쉽다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">사냥 운용</h1>
                         <p>
-                            보스전과 마찬가지로 워리어 리프-레이징 블로우만 쓰고 다녀도 썩 나쁘지 않은 시간당 처치 수를 기록할 수 있지만, 제대로 빌드를 짜서 많은 처치 수를
-                            뽑아내려면 상단 범위가 우월한 인사이징을 함께 사용하면서 오라 블레이드, 레이지 업라이징, 콤보 데스폴트, 소드 일루전, 블리츠 실드, 에르다 파운틴 같은
-                            광범위 공격기도 곁들여주는 것이 좋다.
+                            수평으로 요약할 수 있다. 사거리가 매우 길어 웬만한 범위 내에서 몬스터 타격이 가능하다. 그대신이라면 상하 범위가 비교적 빈약하긴 하지만, 피어싱에 붙은 파편으로
+                            그나마 커버가 가능하며, 리마스터 이후 피어싱 상하 범위 자체도 꽤 크게 늘어나서 심하게 좁은것도 아니다.
                             <br><br>
-                            특히 몇몇 사냥 빌드의 경우 밑점 직후 거의 동시에 레업라를 사용해 레업라의 후딜을 줄이는 일명 '밑점 레업라'가 필수적으로 요구된다. 이 테크닉은 좌우
-                            방향키가 키다운된 상태여야 하고, 입력 타이밍도 상당히 빡빡해 밑점 혹은 레업라만 발동되는 일이 자주 일어난다. 하지만 그만큼 숙달되면 다양한 사냥터에서 사냥
-                            효율이 꽤나 좋아지므로 많은 마릿수의 사냥 빌드를 사용하고 싶다면 익혀두는 것이 좋다.
+                            편리한 사냥을 하기 위해서 사냥 보조 스킬을 적극적으로 사용해야 한다. 가장 중요한 스킬은 5차 스킬인 스플릿 애로우로, 72초 동안 맵을 광범위하게 쓸어담을 수
+                            있다. 그러나 재사용 대기시간이 120초로 가동률이 60%에 그치기 때문에, 빈 시간동안 소환수로 맵을 정리해야 된다. 이볼브는 애초에 사냥용으로 나온 스킬 답게
+                            퍼뎀이 높아 원킬컷이 낮지만, 가이디드 애로우와 프리져, 애로우 일루전은 주력기가 아닌 보조 공격기라 코어 투자와 스펙업이 필요하다.
+                            <br><br>
+                            롱 레인지 트루샷과 볼트 스위프트도 스플릿 공백 중의 사냥을 보완해주는 역할을 하지만, 둘 다 범위가 좋다고 할 수 없어서 사냥 빌드에 따라 사용 여부가 나뉜다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">보스전 운용</h1>
                         <p>
-                            쉽고 강하다. 어지간한 스킬들이 죄다 <strong>최종 데미지</strong>에 관여하기도 하고, 조작 난이도도 쉬워서 단순히 공격에만 집중할 수 있어
-                            피로도도 적으며, 무엇보다도 5차 이후 강력한 극딜기와 <strong>무적</strong>을 포함한 유틸기들이 주어지기 때문이다. 따라서 육성 과정을 제외한 자본
-                            투자 대비 효율은 좋다.
-                            <br><br>
-                            평딜은 인레이지를 켜고, 60초 주기로 인사이징 디버프를 먹이면서 콤보 카운터 완충 후 강화된 레이징 블로우+레이지 업라이징으로 무한 공격하면 된다. 특히
-                            30초마다 소드 일루전 → 레이지 업라이징 순서대로 사용하면 소드 일루전의 효과로 순간적으로 최종 데미지가 증가하므로 듀얼블레이드의 블토카퓨 콤보처럼 꾸준히
-                            누킹을 가할 수 있다.
-                            <br><br>
-                            극딜 시에는 상기한 120초 4버프에 추가로 메이플월드 여신의 축복+오라 웨폰(+시드링)를 사용한 뒤 일루전으로 최종뎀 버프를 받고 공용 스킬인 스인미,
-                            크오솔을 쓴 뒤 공간의 상처가 붙은 레이징 블로우를 난사하면 된다.
+                            원거리에서 방해받지 않고 적을 공격할 수 있는 상황이면 특유의 화력을 충분히 발휘할 수 있지만, 스데미 이상의 상위 보스로 갈수록 방해 수단이 많아져서 소위
+                            '말뚝딜'을 넣기 어려워진다. 특히 애로우 일루전이 얼마나 통하느냐에 따라 상성이 결정되는 경우가 많다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
-                            속칭 보공. 최종 데미지가 높은 대신 총 데미지가 20~25%밖에 되지 않기 때문에 보공 효율이 좋다.
+                            어빌리티에서 가장 많은 데미지 증가량을 얻을 수 있기 때문에 필수적으로 챙겨야 할 어빌리티가 없다면 레전더리 맨 윗 줄 옵션들 중에서 가장 선호받는 어빌리티이다.
                             <br><br>
                             <strong>크리티컬 확률 증가</strong><br>
-                            속칭 크확. 히어로는 기본 크확이 25%로 최저치라 크확이 유달리 절실하다. 유니온 8000 이상의 경우, 하이퍼스킬 / 링크 스킬 / 농장 등을 총동원하면
-                            어빌리티 없어도 100% 달성이 불가능한 것은 아니지만, 어빌리티에 크확이 있으면 세팅이 매우 편해진다. 투자할 자본 수준에 따라서는 1번째 줄에 띄워 쓰기도
-                            한다.
+                            크리티컬 리인포스의 지속 시간동안 크리티컬 확률을 크리티컬 데미지로 변환할 수 있기 때문에 큰 존재감을 발휘한다. 2/3번째 줄에 주로 사용하며 등장 확률이
+                            엄청나게 낮지만 얻는다면 꽤 유용하게 사용할 수 있다.
                             <br><br>
-                            <strong>상태 이상에 걸린 적 공격 시 데미지 증가</strong><br>
-                            속칭 상추뎀. 스카링 소드의 자상과 인사이징의 디버프가 상태 이상으로 판정되므로, 사실상 추가 보공이라고 봐도 무방하다. 레전드리의 경우 10%밖에 붙지 않아
-                            효과가 윗줄 보공의 절반에 불과하므로, 둘째 줄 아래에서 유니크로 달게 된다.
+                            <strong>메소 획득량/아이템 드랍률 증가</strong><br>
+                            모든 캐릭터들에게 선호되는 어빌리티. 사냥 효율을 높일 수 있기 때문에 무엇이 나오든 사용면 된다. 범용성은 아이템 드랍률쪽이 높은 편이다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
-                            이징 블로우, 파이널 어택, 레이지 업라이징, 발할라
+                            피어싱/인핸스 피어싱, 스나이핑/인핸스 스나이핑
                             <br><br>
                             <strong>2순위</strong><br>
-                            인사이징, 오라 블레이드
+                            볼트 스위프트/프리져, 롱 레인지 트루샷/애로우 일루전
                         </p>
                     </div>
                 </article>
