--- a/Web_Programming/homework/팔라딘.html
+++ b/Web_Programming/homework/팔라딘.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>히어로 공략</title>
+    <title>팔리딘 공략</title>
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script>
@@ -146,99 +146,105 @@
             <section id="main-section">
                 <article>
                     <div class="article-header">
-                        <h1 class="article-title">히어로(Hero)</h1>
+                        <h1 class="article-title">팔라딘(Paladin)</h1>
                     </div>
                     <div class="article-body">
-                        <img id=c_image src="image/히어로.webp" alt="히어로">
+                        <img id="c_image" src="image/팔라딘.webp" alt="팔라딘">
                         <h1 id="title">장점</h1>
                         <p>
-                            <strong>강력한 보스전 성능</strong><br>
-                            보스전에서 화력을 대폭 끌어올리는 인레이지와 자상, 바인드에 걸린 몬스터에게 더 큰 데미지를 주는 찬스 어택, 크리티컬 공격의 피해량을 증가시키는 인사이징
-                            등의 버프로 단일 보스 상대로 강력한 딜을 넣을 수 있다. 5차 스킬 소드 오브 버닝 소울과 콤보 인스팅트는 30레벨 기준 각각 75초, 20초라는 긴 지속시간을
-                            가지고 있는 만큼, 화력의 총량을 엄청나게 끌어올려 히어로가 지속딜링 상위권 안에 들어갈 수 있게 만든다. 인팅-일루전으로 순간 화력을 끌어올릴 경우 10초 극딜
-                            능력도 뛰어나다. 또한 콤보 데스폴트라는 무적시간 1.6초에 재사용 대기시간이 고작 25초밖에 안되는 최상급 무적기를 통해 빠르게 패턴을 회피하고 효율적으로 딜을
-                            넣을 수 있다.
+                            <strong>막강한 생존력</strong><br>
+                            일명 팔퀴벌레. 홀리 차지로 항상 (최대 HP에 비례한 공격을 포함한) 피해 감소 10%를 달고 다니고, 블레싱 아머가
+                            활성화되면 거기서 25%가 또 까이고, 그랜드 크로스 도중에는 아예 그마저도 절반만 받는다. 심지어 이래도 힘들다 싶으면 새크로생티티로 최대 30초간 무적
+                            걸고 버티고, 가디언 스피릿으로 파티원을 살려내면 또 10초 무적을 받는다. 이처럼 방어 능력 하나만은 워낙 탁월해서, 이에 견줄 만한 직업은 가동률 67%의
+                            무적기인 로얄 가드를 가진 미하일 정도밖에 없다.
                             <br><br>
-                            <strong>쉽고 간단한 조작 및 운용법</strong><br>
-                            초창기에 나온 직업인만큼 조작 난이도가 매우 단순한데 고유 스킬인 콤보
-                            어택은 온/오프 스킬이라 한번 켜두면 죽지 않는 이상 계속 유지할 수 있고, 평상시에 사용하는 버프 스킬은 스피릿 블레이드, 스카링 소드,
-                            메이플 용사 뿐이라 펫 자동 버프 장착으로 모두 커버가 가능하다. 또한 사냥 주력기, 보스 주력기가 따로 존재하지 않고 레이징 블로우 하나로
-                            통합되어 있기 때문에 어떠한 상황에서든 레이징 블로우를 사용하다가 가끔 다른 스킬을 눌러주면 된다는 점도 조작 난이도를 쉽게 하는 데 일조하고 있다.
+                            <strong>강력하고 안정적인 극딜 능력</strong><br>
+                            시드링이나 링크 및 공용 스킬을 제외한 자체 극딜 과정은 홀리 유니티+블래스드 해머+그랜드 크로스로 종결된다. 만일 바인드 걸어도 보스 외의 패턴이
+                            위협적이라면 새크로생티티로 무적 걸고 패면 그만이다. 물론 극딜 화력은 리마스터 전이나 후나 깔끔한 만큼 강력하기로 정평이 난 지 오래다.
                             <br><br>
-                            <strong>전직업 최고의 최종 데미지 증가량</strong><br>
-                            히어로의 강력한 딜링 능력은 하늘을 찌르는 최종 데미지 증가량에서 나온다. 기본적으로 웨폰 마스터리와 어드밴스드 콤보를 통해 상시 142%를 확보할 수
-                            있으며, 보스전에서는 인레이지 사용으로 인해 202.5%에 도달할 수 있는데, 이 수치는 영구적으로 얻을 수 있는 가장 높은 수치이다. 여기에 소드 일루전 사용 시
-                            8초 동안 추가로 최종뎀을 끌어올 수 있고, 극딜시 콤보 인스팅트와 오라 웨폰 또한 곱해지기에 실전에서 적용되는 수치는 그야말로 하늘을 찌른다. 반면 이렇게 높은
-                            최종 데미지에 대한 역보정으로 보총 데미지는 매우 낮게 설정되어 있고, 크리티컬 데미지도 높은 편이 아닌데, 이는 다시 말하자면 <strong>높은 투자
-                                효율</strong>로 직결된다. 또한 높은 최종데미지 덕분에 전 직업 중에서도 스탯 공격력이 최상위권에 달하는데, 이는 5차 공용 스킬을 사용할때 장점이
-                            된다. 5차 공용 스킬은 어떤 직업이 사용하든 퍼뎀이 통일되어 있기 때문에 기초 능력치가 뛰어난 직업이 이득을 보게 된다. 히어로는 자력으로 최종 데미지를 최소 2배
-                            이상 끌어올릴 수 있기에 5차 공용 스킬의 효율을 최대한 뽑아낼 수 있다.
+                            <strong>크게 의존할 게 없는 준수한 스펙</strong><br>
+                            크리티컬 확률은 기본 47%에 스킬 사용 시 추가 크리티컬 확률이 들어가서 크게 나쁘지 않고, 벞지가 필수적인 것도 아니라서 반드시 챙겨줘야 하는 옵션이 없기
+                            때문에 자본 부담이 적다.
                             <br><br>
-                            <strong>양질의 유틸리티</strong><br>
-                            25초 주기의 무적기인 콤보 데스폴트, 무릉 등에서 공무/공반 보스를 상대할 때 유용한 매직 크래시, 높은 기동성에 한몫하는 플래시 슬래시 등, 불필요하거나 활용하기
-                            까다로운 기능이 일절 없는 알짜배기만 모여있다.
+                            <strong>다양한 유틸리티</strong><br>
+                            스킬 레벨 증가, 높은 수치의 방어율 감소 디버프, 지속형 무적기, 스택형 뎀감기, 쉘판정 가드기, 죽은 동료 부활, 언데드화를 무시하는 즉발 회복기,
+                            바인드, 버프 공유, 버프 해제+제한, 자동 공격기, 슈퍼 스탠스 등 키네시스처럼 개인유틸이 탄탄한데다가 파티원들에게 직접 도움을 줄 수 있는 상당히 많은
+                            수의 유틸기를 가지고 있다. 특히 파티원 1명에게 최대 30초간 무적 부여는 상당한 메리트가 되며, 이와 비슷한 유틸을 가진 다른 직업이 일리움과 미하일로
+                            인구수 최하위를 다투는 직업들이라 더욱 희소성이 있다.
+                            <br><br>
+                            <strong>쉬운 조작 난이도</strong><br>
+                            복잡한 테크닉을 요구하지도 않고 유틸도 다양하며 몸도 튼튼하고 즉사기를 막아주는 스킬이 많아서 컨트롤이 쉽다. 덕분에 질리기도 빨리 질리지만 라이트하게 게임을
+                            즐기고 싶어하는 유저에게는 추천할 만한 직업이다.
+                            <br><br>
+                            <strong>쉬운 코어 강화 난이도</strong><br>
+                            팔라딘의 주요 강화 코어는 디바인 차지, 블래스트, 디바인 저지먼트/디바인 스티그마, 생츄어리로 4개에 불과하며 약식으로 생츄어리를 제외할 경우 단 3개만
+                            강화하면 끝이다. 최근 직업이 거의 모든 스킬을 사용하도록 설계되어 강화할 스킬이 많다는 것을 고려하면 코어 슬롯의 부담도 적고, 코어 젬스톤에 드는 비용도 적다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">단점</h1>
                         <p>
-                            <strong>낮은 기본 크리티컬 확률</strong><br>
-                            기본 크리티컬 확률이 전 직업 최저 수치인 <strong>25%</strong>로 찬스 어택으로 20% 올라가는 것밖에 없다. 때문에 200 이전의 육성 중에
-                            낮은 크리티컬 수치로 인해 원킬컷을 맞추기가 매우 까다롭고 데미지 편차가 상당해서 어떤 직업보다도 크리티컬 확률 수급이 절실하다. 또한 보공 및 방무, 공마 수급만
-                            신경쓰면 되는 대부분의 직업과 달리, 히어로는 추가로 크확 수급까지 꾸준히 계산하며 스탯을 조절해야 한다.
+                            <strong>부족한 기동력</strong><br>
+                            모험가 전사 전체가 공유하는 단점. 추가 이동기라고는 돌진뿐이라, 평범한 더블 점프와 윗점만 가지고는 몸놀림이 시원찮을 수밖에 없다. 물론 보스전에서 팔라딘은
+                            내구도 측면에서 워낙 단단하니까 기동성 부족이 체감되지 않을 수도 있지만, 남들 다 피할 때 혼자 우직하게 얻어맞는 꼴을 보면 답답할 수도 있다. 특히 진
+                            힐라나 검은 마법사 등 얻어맞지 말아야 할 패턴을 굼뜬 몸놀림 때문에 맞아서 레이드의 진행 상황이나 분위기를 악화시킬 때 이를 체감할
+                            수 있다.
+                            <br><br>
+                            <strong>극딜에 편중된 화력 투사 구조</strong><br>
+                            수준급인 극딜에 비해 평딜이 빈약하다. 극딜 과정에서 문제가 생기면 화력이 급감하다 못해 반토막난다. 물론 안정성은 블레싱 아머와 새크로생티티뿐만 아니라
+                            그랜드 크로스로도 보장되므로 크게 문제될 사안은 아니나, 보스 클리어 가능 스펙에서 여유가 없고 극딜까지 문제가 생기면 타임아웃의 위험성이 가파르게 상승한다.
+                            이로 인해 무릉도장 층수가 동스펙대의 다른 직업보다 기본적으로 2층 이상 낮고, 이는 스펙대가 커질수록 더욱 심화된다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">사냥 운용</h1>
                         <p>
-                            보스전과 마찬가지로 워리어 리프-레이징 블로우만 쓰고 다녀도 썩 나쁘지 않은 시간당 처치 수를 기록할 수 있지만, 제대로 빌드를 짜서 많은 처치 수를
-                            뽑아내려면 상단 범위가 우월한 인사이징을 함께 사용하면서 오라 블레이드, 레이지 업라이징, 콤보 데스폴트, 소드 일루전, 블리츠 실드, 에르다 파운틴 같은
-                            광범위 공격기도 곁들여주는 것이 좋다.
-                            <br><br>
-                            특히 몇몇 사냥 빌드의 경우 밑점 직후 거의 동시에 레업라를 사용해 레업라의 후딜을 줄이는 일명 '밑점 레업라'가 필수적으로 요구된다. 이 테크닉은 좌우
-                            방향키가 키다운된 상태여야 하고, 입력 타이밍도 상당히 빡빡해 밑점 혹은 레업라만 발동되는 일이 자주 일어난다. 하지만 그만큼 숙달되면 다양한 사냥터에서 사냥
-                            효율이 꽤나 좋아지므로 많은 마릿수의 사냥 빌드를 사용하고 싶다면 익혀두는 것이 좋다.
+                            5차 전직이전 디바인 차지로 사냥하면서 생츄어리와 스마이트를 광역기로 사용하며, 5차 전직 이후 블레스드 해머를 활성화할 때마다 30초 동안은 서펜트 활성화한
+                            바이퍼의 기분을 느껴볼 수 있다. 물론 나머지 30초 동안은 오라 웨폰이나 블리츠 실드, 에르다샤워, 마이티 묠니르, 생츄어리, 스마이트 등으로 적절히 커버해야
+                            한다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">보스전 운용</h1>
                         <p>
-                            쉽고 강하다. 어지간한 스킬들이 죄다 <strong>최종 데미지</strong>에 관여하기도 하고, 조작 난이도도 쉬워서 단순히 공격에만 집중할 수 있어
-                            피로도도 적으며, 무엇보다도 5차 이후 강력한 극딜기와 <strong>무적</strong>을 포함한 유틸기들이 주어지기 때문이다. 따라서 육성 과정을 제외한 자본
-                            투자 대비 효율은 좋다.
+                            팔라딘의 보스전에서의 가장 큰 메리트는 뭐니뭐니해도 쉽게 사망하지 않는다는 것이다. 보스전 도중 상시 유지가 가능한 홀리 차지와 블레싱 아머에 붙은 모든
+                            피해량 감소 효과가 있어서, 대다수의 보스들이 가지는 즉사기인 최대 HP 비례 100%의 피해를 입히는 공격들의 피해량을 깎아 풀피 상태라면 맞아도 죽지 않고
+                            버틸 수 있으며, 아카이럼의 모니터 브레이크, 파풀라투스의 청홍 레이저 교차처럼 막대한 고정 피해를 입히는 즉사기 역시 블레싱 아머에 붙은 가드 효과로 막아낼
+                            수 있다. 한마디로 유저들을 공포에 떨게 만드는 많은 보스들의 즉사기가 팔라딘에게는 그저 좀 많이 아픈 일반 공격이 되어버리는 셈. 따라서 팔라딘은 물약
+                            재사용 대기시간이 없는 보스전에서는 가만히 있어도 죽지 않는 것으로도 유명하다.
                             <br><br>
-                            평딜은 인레이지를 켜고, 60초 주기로 인사이징 디버프를 먹이면서 콤보 카운터 완충 후 강화된 레이징 블로우+레이지 업라이징으로 무한 공격하면 된다. 특히
-                            30초마다 소드 일루전 → 레이지 업라이징 순서대로 사용하면 소드 일루전의 효과로 순간적으로 최종 데미지가 증가하므로 듀얼블레이드의 블토카퓨 콤보처럼 꾸준히
-                            누킹을 가할 수 있다.
-                            <br><br>
-                            극딜 시에는 상기한 120초 4버프에 추가로 메이플월드 여신의 축복+오라 웨폰(+시드링)를 사용한 뒤 일루전으로 최종뎀 버프를 받고 공용 스킬인 스인미,
-                            크오솔을 쓴 뒤 공간의 상처가 붙은 레이징 블로우를 난사하면 된다.
+                            극딜 외의 화력은 다소 아쉬울 수 있지만, 보스전 메타가 대체로 평딜 위주보다는 극딜 위주라는 점을 염두에 두고 보면 이는 특정 컨탠츠를 제외하고는 큰
+                            단점이라고 하기 어렵다. 오히려 뛰어난 극딜이 처참한 평딜을 가린다고 보는 편이 맞다. 그러나, 상극 관계인 보스는 몇 있다. 근접 평딜러에게 어려운 데미안
+                            또는 높은 기동성을 필요로 하는 루시드 2페이즈가 그 예시다. 물론 이 둘은 패턴 구성이 저열하고 완성도가 낮은 보스이다 보니 팔라딘에게만 상극이라고
+                            하기는 어렵다. 이와는 반대로 카오스 벨룸, 카오스 파풀라투스처럼 물약 쿨다운이 없는 보스는 죽을 위험이 거의 없어서 다른 직업에 비해 낮은 컷으로 도전해볼
+                            수 있다. 시간의 틈 패턴과 시계 폭발 패턴은 홀리 차지의 대미지 감소로도 충분히 견뎌낼 수 있으며 시계 레이저 교차로 인한 즉사 공격은 블레싱 아머나
+                            새크로생티티로 막아낼 수 있다. 해당 패턴들이 사라지는 2페이즈로 가면 죽을 일이 사실상 없어진다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
-                            속칭 보공. 최종 데미지가 높은 대신 총 데미지가 20~25%밖에 되지 않기 때문에 보공 효율이 좋다.
-                            <br><br>
-                            <strong>크리티컬 확률 증가</strong><br>
-                            속칭 크확. 히어로는 기본 크확이 25%로 최저치라 크확이 유달리 절실하다. 유니온 8000 이상의 경우, 하이퍼스킬 / 링크 스킬 / 농장 등을 총동원하면
-                            어빌리티 없어도 100% 달성이 불가능한 것은 아니지만, 어빌리티에 크확이 있으면 세팅이 매우 편해진다. 투자할 자본 수준에 따라서는 1번째 줄에 띄워 쓰기도
-                            한다.
+                            어드밴스드 홀리 차지에 데미지% 보정이 있어 히어로처럼 엄청난 효율을 보이진 않으나, 그래도 자체 보공%은 없어 무난한 선택지다.
                             <br><br>
                             <strong>상태 이상에 걸린 적 공격 시 데미지 증가</strong><br>
-                            속칭 상추뎀. 스카링 소드의 자상과 인사이징의 디버프가 상태 이상으로 판정되므로, 사실상 추가 보공이라고 봐도 무방하다. 레전드리의 경우 10%밖에 붙지 않아
-                            효과가 윗줄 보공의 절반에 불과하므로, 둘째 줄 아래에서 유니크로 달게 된다.
+                            노블 디맨드와 임피니컬 컬리지를 이용하여 상태 이상을 유발할 수 있으므로 이 어빌리티의 효율이 좋다. 그래도 보공에는 밀려서 2~3번 줄에 띄우면 좋다.
+                            <br><br>
+                            <strong>아이템 드롭률 혹은 메소 획득량 증가</strong><br>
+                            광부용 어빌리티.
+                            <br><br>
+                            <strong>크리티컬 확률 증가</strong><br>
+                            기본 크리티컬 확률이 47%로 중간 수준이지만, 유니온 레벨이 낮거나 필수 링크 스킬을 완전히 구비하지 못해서 크리티컬 확률 수급이 어렵다면 고려할 만한 선택지다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
-                            이징 블로우, 파이널 어택, 레이지 업라이징, 발할라
+                            디바인 차지, 블래스트, 디바인 저지먼트/디바인 스티그마
                             <br><br>
                             <strong>2순위</strong><br>
-                            인사이징, 오라 블레이드
+                            생츄어리, 파이널 어택, 스마이트
                         </p>
                     </div>
                 </article>
