--- a/Web_Programming/total_example_2.html
+++ b/Web_Programming/total_example_2.html
@@ -229,7 +229,7 @@
 
 <body>
     <!-- 전체를 감싸는 테그 -->
-    <div id="" page-wrapper">
+    <div id="page-wrapper">
         <!-- 헤더 -->
         <header id="main-header">
             <hgroup>
