--- a/Web_Programming/homework/나이트로드.html
+++ b/Web_Programming/homework/나이트로드.html
@@ -1,9 +1,10 @@
+<!-- data source https://namu.wiki/w/%EB%B3%B4%EC%9A%B0%EB%A7%88%EC%8A%A4%ED%84%B0 -->
 <!DOCTYPE html>
 
 <html>
 
 <head>
-    <title>히어로 공략</title>
+    <title>나이트로드 공략</title>
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script>
@@ -146,99 +147,90 @@
             <section id="main-section">
                 <article>
                     <div class="article-header">
-                        <h1 class="article-title">히어로(Hero)</h1>
+                        <h1 class="article-title">나이트로드(Night Lord)</h1>
                     </div>
                     <div class="article-body">
-                        <img id=c_image src="image/히어로.webp" alt="히어로">
+                        <img id="c_image" src="image/나이트로드.webp" alt="나이트로드">
                         <h1 id="title">장점</h1>
                         <p>
-                            <strong>강력한 보스전 성능</strong><br>
-                            보스전에서 화력을 대폭 끌어올리는 인레이지와 자상, 바인드에 걸린 몬스터에게 더 큰 데미지를 주는 찬스 어택, 크리티컬 공격의 피해량을 증가시키는 인사이징
-                            등의 버프로 단일 보스 상대로 강력한 딜을 넣을 수 있다. 5차 스킬 소드 오브 버닝 소울과 콤보 인스팅트는 30레벨 기준 각각 75초, 20초라는 긴 지속시간을
-                            가지고 있는 만큼, 화력의 총량을 엄청나게 끌어올려 히어로가 지속딜링 상위권 안에 들어갈 수 있게 만든다. 인팅-일루전으로 순간 화력을 끌어올릴 경우 10초 극딜
-                            능력도 뛰어나다. 또한 콤보 데스폴트라는 무적시간 1.6초에 재사용 대기시간이 고작 25초밖에 안되는 최상급 무적기를 통해 빠르게 패턴을 회피하고 효율적으로 딜을
-                            넣을 수 있다.
+                            <strong>전직업 최강의 극딜 능력</strong><br>
+                            나이트로드는 극딜 순위를 언급할 때 최상위권에서 내려오지 않는 직업이다. 그만큼 스킬 구성이 바인드 후 극딜에 특화되어 있다. 10초 동안 약 955,152%의
+                            퍼뎀을 쏟아부을 수 있는 직업은 나이트로드가 유일하다.
                             <br><br>
-                            <strong>쉽고 간단한 조작 및 운용법</strong><br>
-                            초창기에 나온 직업인만큼 조작 난이도가 매우 단순한데 고유 스킬인 콤보
-                            어택은 온/오프 스킬이라 한번 켜두면 죽지 않는 이상 계속 유지할 수 있고, 평상시에 사용하는 버프 스킬은 스피릿 블레이드, 스카링 소드,
-                            메이플 용사 뿐이라 펫 자동 버프 장착으로 모두 커버가 가능하다. 또한 사냥 주력기, 보스 주력기가 따로 존재하지 않고 레이징 블로우 하나로
-                            통합되어 있기 때문에 어떠한 상황에서든 레이징 블로우를 사용하다가 가끔 다른 스킬을 눌러주면 된다는 점도 조작 난이도를 쉽게 하는 데 일조하고 있다.
+                            <strong>빠른 기동성과 공격 속도</strong><br>
+                            아대 기본 6단계+액셀레이션 추가 2단계로 상시 최대 공속(8단계)을 향유할 수 있고, 플래시 점프 후 쉐도우 리프와 쉐도우 러쉬를 쓸 수 있으므로 사실상 4단
+                            점프까지도 가능하다.
                             <br><br>
-                            <strong>전직업 최고의 최종 데미지 증가량</strong><br>
-                            히어로의 강력한 딜링 능력은 하늘을 찌르는 최종 데미지 증가량에서 나온다. 기본적으로 웨폰 마스터리와 어드밴스드 콤보를 통해 상시 142%를 확보할 수
-                            있으며, 보스전에서는 인레이지 사용으로 인해 202.5%에 도달할 수 있는데, 이 수치는 영구적으로 얻을 수 있는 가장 높은 수치이다. 여기에 소드 일루전 사용 시
-                            8초 동안 추가로 최종뎀을 끌어올 수 있고, 극딜시 콤보 인스팅트와 오라 웨폰 또한 곱해지기에 실전에서 적용되는 수치는 그야말로 하늘을 찌른다. 반면 이렇게 높은
-                            최종 데미지에 대한 역보정으로 보총 데미지는 매우 낮게 설정되어 있고, 크리티컬 데미지도 높은 편이 아닌데, 이는 다시 말하자면 <strong>높은 투자
-                                효율</strong>로 직결된다. 또한 높은 최종데미지 덕분에 전 직업 중에서도 스탯 공격력이 최상위권에 달하는데, 이는 5차 공용 스킬을 사용할때 장점이
-                            된다. 5차 공용 스킬은 어떤 직업이 사용하든 퍼뎀이 통일되어 있기 때문에 기초 능력치가 뛰어난 직업이 이득을 보게 된다. 히어로는 자력으로 최종 데미지를 최소 2배
-                            이상 끌어올릴 수 있기에 5차 공용 스킬의 효율을 최대한 뽑아낼 수 있다.
+                            <strong>낮은 사냥 피로도와 준수한 사냥 능력</strong><br>
+                            사출기인 마크 오브 나이트로드로 원킬이 날 정도의 스펙이라면 세르니움 전까지 손쉽게 넘어갈 수 있고, 세르니움 이후에도 써든레이드, 풍마수리검, 비전서 등의 광범위
+                            공격기로 사출기의 공백을 메울 수 있다. 여기에 쇼다운 챌린지의 추가 경험치와 드롭률까지 추가하면 사냥 효율이 더욱 증가한다.
                             <br><br>
-                            <strong>양질의 유틸리티</strong><br>
-                            25초 주기의 무적기인 콤보 데스폴트, 무릉 등에서 공무/공반 보스를 상대할 때 유용한 매직 크래시, 높은 기동성에 한몫하는 플래시 슬래시 등, 불필요하거나 활용하기
-                            까다로운 기능이 일절 없는 알짜배기만 모여있다.
+                            <strong>쉬운 코어 강화 난이도</strong><br>
+                            약식 코강은 보스전 주력기인 쿼드러플 스로우, 보조 공격기인 마크 오브 어쌔신, 사냥기인 쇼다운 챌린지만 신경쓰면 된다. 정식 코강도 사냥용으로 써든 레이드, 포
+                            시즌, 다크 플레어 등만 추가로 강화하고, 강화 코어의 가짓수도 11개밖에 되지 않아서 유효 코어를 뽑기도 쉽다.
+                            <br><br>
+                            <strong>높은 크리티컬 확률</strong><br>
+                            나이트로드의 크확은 75%로 전직업 중에서 패스파인더(79%) 다음으로 비숍, 다크나이트와 함께 공동 2위다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">단점</h1>
                         <p>
-                            <strong>낮은 기본 크리티컬 확률</strong><br>
-                            기본 크리티컬 확률이 전 직업 최저 수치인 <strong>25%</strong>로 찬스 어택으로 20% 올라가는 것밖에 없다. 때문에 200 이전의 육성 중에
-                            낮은 크리티컬 수치로 인해 원킬컷을 맞추기가 매우 까다롭고 데미지 편차가 상당해서 어떤 직업보다도 크리티컬 확률 수급이 절실하다. 또한 보공 및 방무, 공마 수급만
-                            신경쓰면 되는 대부분의 직업과 달리, 히어로는 추가로 크확 수급까지 꾸준히 계산하며 스탯을 조절해야 한다.
+                            <strong>(무자본 한정) 다소 높은 사냥 원킬컷</strong><br>
+                            사냥 주력기인 쇼다운 챌린지는 총 퍼뎀이 쉐파 포함 2,000%대로 보통 수준이지만, 숙련된 표창술과 다크 세레니티 외에는 상시 화력 보정이 없다. 그래서 높은 무기
+                            상수와 낮은 아대 공격력 덕분에 투자 효율만 좋다. 거꾸로 말해서 자본이 따라주지 않는다면 원킬이 잘 나오지 않는다. 따라서 링크와 유니온 등 스펙 보강 수단이
+                            없으면 사냥이 어려워진다.
+                            <br><br>
+                            <strong>낮은 안정성</strong><br>
+                            나이트로드가 유리 대포라 불리는 가장 큰 원인으로, 5차 스킬까지 포함해서 다크 사이트를 제외하면 무적이나 받는 피해량 감소 등의 방어 관련 기능이 일절 없다.
+                            그럼에도 불구하고 스프레드로 인해 생성되는 추가 스로우를 맞히려면 140px까지 근접해야 한다. 그래서 해방된 제네시스 무기의 무적(창조의 아이온)이 어느 누구보다도
+                            절실하다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">사냥 운용</h1>
                         <p>
-                            보스전과 마찬가지로 워리어 리프-레이징 블로우만 쓰고 다녀도 썩 나쁘지 않은 시간당 처치 수를 기록할 수 있지만, 제대로 빌드를 짜서 많은 처치 수를
-                            뽑아내려면 상단 범위가 우월한 인사이징을 함께 사용하면서 오라 블레이드, 레이지 업라이징, 콤보 데스폴트, 소드 일루전, 블리츠 실드, 에르다 파운틴 같은
-                            광범위 공격기도 곁들여주는 것이 좋다.
-                            <br><br>
-                            특히 몇몇 사냥 빌드의 경우 밑점 직후 거의 동시에 레업라를 사용해 레업라의 후딜을 줄이는 일명 '밑점 레업라'가 필수적으로 요구된다. 이 테크닉은 좌우
-                            방향키가 키다운된 상태여야 하고, 입력 타이밍도 상당히 빡빡해 밑점 혹은 레업라만 발동되는 일이 자주 일어난다. 하지만 그만큼 숙달되면 다양한 사냥터에서 사냥
-                            효율이 꽤나 좋아지므로 많은 마릿수의 사냥 빌드를 사용하고 싶다면 익혀두는 것이 좋다.
+                            단순하고 단조로운 사냥 방식 덕분에 피로도는 극히 낮다. 쇼다운 챌린지를 주력으로 쓰고, 포 시즌과 풍마수리검으로 필드를 적당히 정리하며, 다크 플레어와 다크로드의
+                            비전서를 설치하면서 필드를 장악하면 끝. 물론 마크 오브 나이트로드로 원킬이 나는 스펙을 구비한다면 섀도어의 메익원킬에 비할 바는 아니지만 나름 꽤 준수한 수준의
+                            효율을 볼 수 있다. 그러나 유니온용 부캐로만 쓸 생각으로 키우는 에픽둘둘 캐릭터라면, 무기 상수가 아무리 높아도 평범한 퍼뎀 수치 때문에 주력기로도 원킬을 보기
+                            힘들다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">보스전 운용</h1>
                         <p>
-                            쉽고 강하다. 어지간한 스킬들이 죄다 <strong>최종 데미지</strong>에 관여하기도 하고, 조작 난이도도 쉬워서 단순히 공격에만 집중할 수 있어
-                            피로도도 적으며, 무엇보다도 5차 이후 강력한 극딜기와 <strong>무적</strong>을 포함한 유틸기들이 주어지기 때문이다. 따라서 육성 과정을 제외한 자본
-                            투자 대비 효율은 좋다.
-                            <br><br>
-                            평딜은 인레이지를 켜고, 60초 주기로 인사이징 디버프를 먹이면서 콤보 카운터 완충 후 강화된 레이징 블로우+레이지 업라이징으로 무한 공격하면 된다. 특히
-                            30초마다 소드 일루전 → 레이지 업라이징 순서대로 사용하면 소드 일루전의 효과로 순간적으로 최종 데미지가 증가하므로 듀얼블레이드의 블토카퓨 콤보처럼 꾸준히
-                            누킹을 가할 수 있다.
-                            <br><br>
-                            극딜 시에는 상기한 120초 4버프에 추가로 메이플월드 여신의 축복+오라 웨폰(+시드링)를 사용한 뒤 일루전으로 최종뎀 버프를 받고 공용 스킬인 스인미,
-                            크오솔을 쓴 뒤 공간의 상처가 붙은 레이징 블로우를 난사하면 된다.
+                            모든 능력치를 화력에 몰아넣은 유리 대포. 평상시에는 거리를 벌린 상황에서 속칭 '짤딜'을 누적시키다가, 극딜 타이밍에 바인드 걸고 초근접 극딜을 쏟아붓는 식으로
+                            운용한다. 다른 직업이 하나둘씩 가지고 있는 무적이나 피해 감소 등 방어 기능이 일절 존재하지 않고, 믿을 것은 오직 다크 사이트와 돌진 중 다크 사이트가 적용되는
+                            쉐도우 리프밖에 없다. 그래서 조작 난이도에 비해 운용 난이도는 상당히 어렵다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">어빌리티</h1>
                         <p>
                             <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
-                            속칭 보공. 최종 데미지가 높은 대신 총 데미지가 20~25%밖에 되지 않기 때문에 보공 효율이 좋다.
-                            <br><br>
-                            <strong>크리티컬 확률 증가</strong><br>
-                            속칭 크확. 히어로는 기본 크확이 25%로 최저치라 크확이 유달리 절실하다. 유니온 8000 이상의 경우, 하이퍼스킬 / 링크 스킬 / 농장 등을 총동원하면
-                            어빌리티 없어도 100% 달성이 불가능한 것은 아니지만, 어빌리티에 크확이 있으면 세팅이 매우 편해진다. 투자할 자본 수준에 따라서는 1번째 줄에 띄워 쓰기도
-                            한다.
+                            극딜러로서 발군의 능력을 발휘하는 나로에게는 이보다 더 좋은 선택지가 없다.
                             <br><br>
                             <strong>상태 이상에 걸린 적 공격 시 데미지 증가</strong><br>
-                            속칭 상추뎀. 스카링 소드의 자상과 인사이징의 디버프가 상태 이상으로 판정되므로, 사실상 추가 보공이라고 봐도 무방하다. 레전드리의 경우 10%밖에 붙지 않아
-                            효과가 윗줄 보공의 절반에 불과하므로, 둘째 줄 아래에서 유니크로 달게 된다.
+                            보공 이후 가장 권장되는 옵션이다. 특히 모험가 도적은 공통적으로 베놈이라는 중독 상태이상을 지니고 있으므로, 상시 추가 보공이나 다름없다.
+                            <br><br>
+                            <strong>버프 지속시간 증가</strong><br>
+                            자버프보다는 엔버 링크(소울 컨트랙트)의 지속시간을 늘리기 위해 채용한다. 바인드 빠진 이후에도 스프레드는 지속되기 때문에 채용할 가치가 충분하다.
+                            <br><br>
+                            <strong>일반 몬스터 공격 시 데미지 증가</strong><br>
+                            쇼다운 챌린지의 수리검이나 마크 오브 나이트로드 등의 높은 원킬컷을 조금이라도 낮출 의향이 있다면, 이 옵션 또한 고려할 만하다.
+                            <br><br>
+                            <strong>메소 획득량/아이템 드랍률 증가</strong><br>
+                            아케인 리버에서 사냥할 때 효과적이다. 굳이 광부 목적으로 육성하는 캐릭터가 아니더라도, 보스 레이드 보상을 조금이라도 더 받을 때 의외의 효율을 보일 수 있다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
-                            이징 블로우, 파이널 어택, 레이지 업라이징, 발할라
+                            쿼드러플 스로우, 쇼다운 챌린지, 마크 오브 어쌔신/나이트로드
                             <br><br>
                             <strong>2순위</strong><br>
-                            인사이징, 오라 블레이드
+                            다크 플레어, 써든레이드, 포 시즌
                         </p>
                     </div>
                 </article>
