--- a/Web_Programming/homework/바이퍼.html
+++ b/Web_Programming/homework/바이퍼.html
@@ -1,9 +1,10 @@
+<!-- data source https://namu.wiki/w/%EB%B3%B4%EC%9A%B0%EB%A7%88%EC%8A%A4%ED%84%B0 -->
 <!DOCTYPE html>
 
 <html>
 
 <head>
-    <title>히어로 공략</title>
+    <title>바이퍼 공략</title>
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script>
@@ -146,99 +147,120 @@
             <section id="main-section">
                 <article>
                     <div class="article-header">
-                        <h1 class="article-title">히어로(Hero)</h1>
+                        <h1 class="article-title">바이퍼(Viper)</h1>
                     </div>
                     <div class="article-body">
-                        <img id=c_image src="image/히어로.webp" alt="히어로">
+                        <img id="c_image" src="image/바이퍼.webp" alt="바이퍼">
                         <h1 id="title">장점</h1>
                         <p>
-                            <strong>강력한 보스전 성능</strong><br>
-                            보스전에서 화력을 대폭 끌어올리는 인레이지와 자상, 바인드에 걸린 몬스터에게 더 큰 데미지를 주는 찬스 어택, 크리티컬 공격의 피해량을 증가시키는 인사이징
-                            등의 버프로 단일 보스 상대로 강력한 딜을 넣을 수 있다. 5차 스킬 소드 오브 버닝 소울과 콤보 인스팅트는 30레벨 기준 각각 75초, 20초라는 긴 지속시간을
-                            가지고 있는 만큼, 화력의 총량을 엄청나게 끌어올려 히어로가 지속딜링 상위권 안에 들어갈 수 있게 만든다. 인팅-일루전으로 순간 화력을 끌어올릴 경우 10초 극딜
-                            능력도 뛰어나다. 또한 콤보 데스폴트라는 무적시간 1.6초에 재사용 대기시간이 고작 25초밖에 안되는 최상급 무적기를 통해 빠르게 패턴을 회피하고 효율적으로 딜을
-                            넣을 수 있다.
+                            <strong>단순하고 쉬운 조작법과 운용법</strong><br>
+                            사이클 자체에 온갖 컨트롤 요소가 존재하는 다른 직업에 비해, 바이퍼는 서펜트 스크류 켜고 피스트 인레이지 하나만 쓰면 되기에 컨트롤이 단순하고 간편하다. 설령
+                            위험해지더라도 어지간한 공격은 어드밴스드 대시나
+                            스크류 펀치+피스트 인레이지 연계로 피하고, 정 피하기 어렵다면 디펜스 폼으로 경감해 흘릴 수 있으므로 리스크도 적다.
                             <br><br>
-                            <strong>쉽고 간단한 조작 및 운용법</strong><br>
-                            초창기에 나온 직업인만큼 조작 난이도가 매우 단순한데 고유 스킬인 콤보
-                            어택은 온/오프 스킬이라 한번 켜두면 죽지 않는 이상 계속 유지할 수 있고, 평상시에 사용하는 버프 스킬은 스피릿 블레이드, 스카링 소드,
-                            메이플 용사 뿐이라 펫 자동 버프 장착으로 모두 커버가 가능하다. 또한 사냥 주력기, 보스 주력기가 따로 존재하지 않고 레이징 블로우 하나로
-                            통합되어 있기 때문에 어떠한 상황에서든 레이징 블로우를 사용하다가 가끔 다른 스킬을 눌러주면 된다는 점도 조작 난이도를 쉽게 하는 데 일조하고 있다.
+                            <strong>강한 화력</strong><br>
+                            에너지 오브(라이트닝 폼) 3연속에 하울링 피스트를 더한 것만으로 극딜 퍼뎀이 60만%대를 넘긴다. 그렇다고 극딜만 뛰어난 건 아니고, 평딜 또한 인레이지+서펜트
+                            스크류로 꾸준히 뽑아내니 아쉬울 구석이 없다.
                             <br><br>
-                            <strong>전직업 최고의 최종 데미지 증가량</strong><br>
-                            히어로의 강력한 딜링 능력은 하늘을 찌르는 최종 데미지 증가량에서 나온다. 기본적으로 웨폰 마스터리와 어드밴스드 콤보를 통해 상시 142%를 확보할 수
-                            있으며, 보스전에서는 인레이지 사용으로 인해 202.5%에 도달할 수 있는데, 이 수치는 영구적으로 얻을 수 있는 가장 높은 수치이다. 여기에 소드 일루전 사용 시
-                            8초 동안 추가로 최종뎀을 끌어올 수 있고, 극딜시 콤보 인스팅트와 오라 웨폰 또한 곱해지기에 실전에서 적용되는 수치는 그야말로 하늘을 찌른다. 반면 이렇게 높은
-                            최종 데미지에 대한 역보정으로 보총 데미지는 매우 낮게 설정되어 있고, 크리티컬 데미지도 높은 편이 아닌데, 이는 다시 말하자면 <strong>높은 투자
-                                효율</strong>로 직결된다. 또한 높은 최종데미지 덕분에 전 직업 중에서도 스탯 공격력이 최상위권에 달하는데, 이는 5차 공용 스킬을 사용할때 장점이
-                            된다. 5차 공용 스킬은 어떤 직업이 사용하든 퍼뎀이 통일되어 있기 때문에 기초 능력치가 뛰어난 직업이 이득을 보게 된다. 히어로는 자력으로 최종 데미지를 최소 2배
-                            이상 끌어올릴 수 있기에 5차 공용 스킬의 효율을 최대한 뽑아낼 수 있다.
+                            <strong>뛰어난 기동성</strong><br>
+                            어드밴스드 대쉬와 더블점프를 같이 쓰면 블래스터마냥 순식간에 X축 장거리를 이동하는 기동력을 보여주며, 6방향으로 이동 가능한 퓨리어스 차지와 라이트닝 폼의
+                            고속이동까지 조합되어 바이퍼는 사방팔방으로 빠르게
+                            이동이 가능하다. 대쉬 스킬로 정밀한 동작도 챙긴 만큼 바이퍼의 기동력은 우수하다 할 수 있다.
                             <br><br>
-                            <strong>양질의 유틸리티</strong><br>
-                            25초 주기의 무적기인 콤보 데스폴트, 무릉 등에서 공무/공반 보스를 상대할 때 유용한 매직 크래시, 높은 기동성에 한몫하는 플래시 슬래시 등, 불필요하거나 활용하기
-                            까다로운 기능이 일절 없는 알짜배기만 모여있다.
+                            <strong>피로도 낮은 사냥 능력</strong><br>
+                            리마스터로 서펜트 스크류가 온오프화되면서 사냥이 더 편해졌다. 아케인리버 지역에서 사출기까지 원킬내야 한계치까지 사냥이 가능한 다른 직업들보다 요구 스펙도 비교적
+                            낮고 피로도도 적어서 장시간 사냥에 유리하다.
+                            설령 세르니움 이후 스크류 원킬이 불가능해져서 훅 봄버로 강제된다 해도 나쁠 것이 전혀 없다.
+                            <br><br>
+                            <strong>낮은 어빌리티 의존도</strong><br>
+                            딱히 부족한 스펙이 없어서 필수 어빌이라고 할 만한 게 없다. 첫 줄에 보공이 떠도 되고, 메획이나 아획 등 광부용 어빌리티도 괜찮다. 특히 일부 직업은 크확을
+                            맞추느라 힘든 반면 바이퍼는 아무런 투자를 하지
+                            않아도 보스전 한정에선 100퍼의 크리티컬을 보장하는지라 더욱 크게 다가오는 장점이다.
+                            <br><br>
+                            <strong>단순한 코어 강화</strong><br>
+                            필수로 강화할 스킬은 보스전 주력기인 피스트 인레이지와 파이널 어택 기능이 있는 전함 노틸러스, 씨 서펜트 인레이지/서펜트 어썰트 인레이지밖에 없다. 사냥에서는
+                            서펜트 2~3틱이 나도 훅 봄버를 같이 사용하면
+                            무한유지도 쉽고 타직업의 주력기 원킬 사냥처럼 할 수 있다보니 더욱 코강 압박이 덜한 편이다. 다만 세르니움 이후 사냥터부터는 서펜트 2~3틱도 힘들어지는데, 이때
+                            사냥용 코어로 훅 봄버와 씨 서펜트 버스트를
+                            채용하면 된다. 남는 한 칸은 그나마 보스전에서 사용 빈도가 높은 스크류 펀치로 채운다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">단점</h1>
                         <p>
-                            <strong>낮은 기본 크리티컬 확률</strong><br>
-                            기본 크리티컬 확률이 전 직업 최저 수치인 <strong>25%</strong>로 찬스 어택으로 20% 올라가는 것밖에 없다. 때문에 200 이전의 육성 중에
-                            낮은 크리티컬 수치로 인해 원킬컷을 맞추기가 매우 까다롭고 데미지 편차가 상당해서 어떤 직업보다도 크리티컬 확률 수급이 절실하다. 또한 보공 및 방무, 공마 수급만
-                            신경쓰면 되는 대부분의 직업과 달리, 히어로는 추가로 크확 수급까지 꾸준히 계산하며 스탯을 조절해야 한다.
+                            <strong>극딜기에 몰려 있는 무적</strong><br>
+                            바이퍼에게는 디펜스 폼이라는 이론상 가동률이 최대 75%에 달하는 방어 스킬이 있으나, 무적은 극딜기인 라이트닝 폼과 하울링 피스트에만 붙어있다. 최상위권
+                            보스전일수록 최대 HP의 100%를 초과하는 수치의
+                            피해를 주는 경우가 많아서, 극딜을 포기하고 무적으로 쓰거나 컨트롤에 심혈을 기울여야 하는 상황이 많아진다.
+                            <br><br>
+                            <strong>활용하기 어려운 씨 서펜트 버스트</strong><br>
+                            씨 서펜트 버스트는 격투 스킬에 일정 주기마다 발동되는 후속타+전방 일직선 범위 공격 스킬이라, 육성 후반부로 갈수록 사냥에서의 비중이 낮아진다. 특히 리멘까지는
+                            스크류 원킬만 나면 훅 봄버조자 액션 딜레이
+                            때문에 잘 쓰지 않게 되고, 자연히 버스트를 볼 일조차 적어지게 된다. 그렇다고 세르니움 들어서 훅 봄버가 본격적으로 기용된다 해도, 조금만 높이 뛰어도 아래가 비는
+                            버스트가 활약할 구석이 많지 않다. 그나마 어썰트 스택은 쌓이니 그걸 활용하는 게 고작이다.
+                            <br><br>
+                            <strong>서펜트 스크류의 짧은 사거리</strong><br>
+                            서펜트 스크류의 짧은 사거리는 사냥에서는 별 의미가 없으나, 보스전에서는 큰 단점으로 작용하고 있다. 보스전 주력기인 피스트 인레이지의 사거리는 리마스터 및 밸런스
+                            패치를 통해 늘어났으나, 서펜트 스크류는
+                            생긴 이후로 범위 관련 패치가 전혀 없어 주력기와 서펜트의 사거리 간의 괴리가 매우 크다. 서펜트 스크류가 극딜 타임에만 사용하는 스킬이었으면 큰 단점으로 작용하지
+                            않았겠지만, 서펜트 스크류는 평딜에서 큰
+                            비중을 차지한다. 따라서 보스전에서의 화력은 접근을 쉽게 허용하는지의 여부에 따라 크게 갈린다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">사냥 운용</h1>
                         <p>
-                            보스전과 마찬가지로 워리어 리프-레이징 블로우만 쓰고 다녀도 썩 나쁘지 않은 시간당 처치 수를 기록할 수 있지만, 제대로 빌드를 짜서 많은 처치 수를
-                            뽑아내려면 상단 범위가 우월한 인사이징을 함께 사용하면서 오라 블레이드, 레이지 업라이징, 콤보 데스폴트, 소드 일루전, 블리츠 실드, 에르다 파운틴 같은
-                            광범위 공격기도 곁들여주는 것이 좋다.
+                            단순하고 쉽다. 5차 직후부터 세르니움 이전까지는 서펜트 스크류로 시작하고 끝난다. 서펜트 1틱컷 스펙을 갖췄다면, 활성화하고 슈퍼 점프와 볼텍스 점프(윗점)만으로
+                            사방팔방 뛰어다니기만 하면 다 지워진다.
+                            게다가 투사체나 설치기가 따로 있는 것도 아니라 달리 신경쓸 것도 없다. 물론 이건 편한 사냥일 뿐, 효율적인 사냥과는 거리가 있다. 그래도 세르니움 전까지 재획
+                            빨고 광부 노릇에 집중하기에는 더할 나위 없이
+                            좋다.
                             <br><br>
-                            특히 몇몇 사냥 빌드의 경우 밑점 직후 거의 동시에 레업라를 사용해 레업라의 후딜을 줄이는 일명 '밑점 레업라'가 필수적으로 요구된다. 이 테크닉은 좌우
-                            방향키가 키다운된 상태여야 하고, 입력 타이밍도 상당히 빡빡해 밑점 혹은 레업라만 발동되는 일이 자주 일어난다. 하지만 그만큼 숙달되면 다양한 사냥터에서 사냥
-                            효율이 꽤나 좋아지므로 많은 마릿수의 사냥 빌드를 사용하고 싶다면 익혀두는 것이 좋다.
+                            그러나 굳이 '세르니움 이전'이라고 표기한 이유가 있다. 어센틱포스를 요구하기 시작하는 260레벨부터는 필드 잡몹의 HP가 수십억을 넘어가므로, 어지간한 스펙으로는
+                            서펜트로 흠집도 내기 어렵다. 애당초
+                            30레벨에도 퍼뎀이 2,340%에 불과한 서펜트 스크류로는 한계가 여실하다. 그래서 서펜트 스크류가 생기기 이전 외에도, 서펜트 스크류의 '약발'이 다한 이후로는 훅
+                            봄버를 주력으로 쓰게 된다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">보스전 운용</h1>
                         <p>
-                            쉽고 강하다. 어지간한 스킬들이 죄다 <strong>최종 데미지</strong>에 관여하기도 하고, 조작 난이도도 쉬워서 단순히 공격에만 집중할 수 있어
-                            피로도도 적으며, 무엇보다도 5차 이후 강력한 극딜기와 <strong>무적</strong>을 포함한 유틸기들이 주어지기 때문이다. 따라서 육성 과정을 제외한 자본
-                            투자 대비 효율은 좋다.
-                            <br><br>
-                            평딜은 인레이지를 켜고, 60초 주기로 인사이징 디버프를 먹이면서 콤보 카운터 완충 후 강화된 레이징 블로우+레이지 업라이징으로 무한 공격하면 된다. 특히
-                            30초마다 소드 일루전 → 레이지 업라이징 순서대로 사용하면 소드 일루전의 효과로 순간적으로 최종 데미지가 증가하므로 듀얼블레이드의 블토카퓨 콤보처럼 꾸준히
-                            누킹을 가할 수 있다.
-                            <br><br>
-                            극딜 시에는 상기한 120초 4버프에 추가로 메이플월드 여신의 축복+오라 웨폰(+시드링)를 사용한 뒤 일루전으로 최종뎀 버프를 받고 공용 스킬인 스인미,
-                            크오솔을 쓴 뒤 공간의 상처가 붙은 레이징 블로우를 난사하면 된다.
+                            씨 서펜트를 활성화한 상황에서 피스트 인레이지만 냅다 때려박고 있으면 끝. 별다른 캔슬 방법이나 MP 이외의 2차 자원을 요구하지 않기 때문에 지극히 단순하다. 또한
+                            바이퍼에게는 이론상 가동률이 무려 최대 75%나 되는 디펜스 폼이 있어 각종 즉사기에 대처할 수 있다. 그러나 무적의 경우 죄다 극딜기인 라이트닝 폼의 에너지볼과
+                            하울링 피스트에만 붙어있는데, 매우 큰 데미지를 주는 즉사기를 가진 보스에서는 치명적인 단점이다. 이런 경우에는 무식하게 맞고 버티는 대신, 라이트닝 폼의 순간이동과
+                            스크류 펀치의 모션 캔슬 기능을 이용해 재빠르게 회피하고 치는 식으로 운용해야 한다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">어빌리티</h1>
                         <p>
-                            <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
-                            속칭 보공. 최종 데미지가 높은 대신 총 데미지가 20~25%밖에 되지 않기 때문에 보공 효율이 좋다.
+                            <strong>패시브 스킬 레벨 1 증가</strong><br>
+                            씨 서펜트 강화 스킬들과 오펜스/디펜스 폼, 가드 크러쉬가 적용된다. 쓸컴뱃까지 적용하면 오펜스/디펜스 폼의 증가량이 4%, 가드 크러쉬의 방무가 8%, 최종
+                            데미지가 1%, 공격력이 4 증가한다. 단 쓸컴뱃을 적용해야 쓸 만한 어빌리티이기 때문에 쓸컴뱃이 없으면 보공에 밀린다. 다만 후반부 고렙으로 가서 다른 곳에서
+                            보공을 많이 챙길수록 어빌 보공의 효율이 떨어지고 바이퍼는 V 매트릭스 코어 칸이 넉넉해서 쓸컴뱃도 채용하는 만큼 보공과 패시브 둘 중 먼저 뜬 걸 사용하면 된다.
                             <br><br>
-                            <strong>크리티컬 확률 증가</strong><br>
-                            속칭 크확. 히어로는 기본 크확이 25%로 최저치라 크확이 유달리 절실하다. 유니온 8000 이상의 경우, 하이퍼스킬 / 링크 스킬 / 농장 등을 총동원하면
-                            어빌리티 없어도 100% 달성이 불가능한 것은 아니지만, 어빌리티에 크확이 있으면 세팅이 매우 편해진다. 투자할 자본 수준에 따라서는 1번째 줄에 띄워 쓰기도
-                            한다.
+                            <strong>보스 공격 시 데미지 증가</strong><br>
+                            보스전에 중심을 두면 뽑아 둘 가치가 있다. 전직업을 통틀어 무난한 어빌리티 중 하나.
                             <br><br>
-                            <strong>상태 이상에 걸린 적 공격 시 데미지 증가</strong><br>
-                            속칭 상추뎀. 스카링 소드의 자상과 인사이징의 디버프가 상태 이상으로 판정되므로, 사실상 추가 보공이라고 봐도 무방하다. 레전드리의 경우 10%밖에 붙지 않아
-                            효과가 윗줄 보공의 절반에 불과하므로, 둘째 줄 아래에서 유니크로 달게 된다.
+                            <strong>아이템/메소 획득량 증가</strong><br>
+                            사냥을 중심으로 하면 뽑아 둘 가치가 충분하며 서펜트 원킬이 나면 편한 사냥이 가능한 바이퍼 특징상 좋은 어빌리티로 손꼽힌다. 보공을 뽑았다면 상추뎀과 함께
+                            2~3줄에 하나 뽑아도 좋다.
+                            <br><br>
+                            <strong>상태 이상에 걸린 대상 공격 시 데미지 증가</strong><br>
+                            바이퍼는 서펜트 인레이지 디버프를 상시 적용시킬 수 있기 때문에 궁합이 좋다.
+                            <br><br>
+                            <strong>일반 몬스터 공격 시 데미지 증가</strong><br>
+                            서펜트 스크류의 높은 1틱컷을 위해 사용하는 어빌리티로 보스보다는 사냥에 중점을 둔다면 뽑아둘 가치가 있다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
-                            이징 블로우, 파이널 어택, 레이지 업라이징, 발할라
+                            피스트 인레이지, 씨 서펜트 인레이지/서펜트 어썰트 인레이지, 전함 노틸러스
                             <br><br>
                             <strong>2순위</strong><br>
-                            인사이징, 오라 블레이드
+                            훅 봄버, 씨 서펜트 버스트/서펜트 어썰트, 스크류 펀치
                         </p>
                     </div>
                 </article>
