--- a/Web_Programming/homework/아크메이지(썬,콜).html
+++ b/Web_Programming/homework/아크메이지(썬,콜).html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <title>히어로 공략</title>
+    <title>아크메이지(썬,콜) 공략</title>
     <link rel="stylesheet" href="Style.css"> <!-- 외부 스타일 시트 -->
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
     <script>
@@ -146,99 +146,109 @@
             <section id="main-section">
                 <article>
                     <div class="article-header">
-                        <h1 class="article-title">히어로(Hero)</h1>
+                        <h1 class="article-title">아크메이지(불,독)(Arch Mage (Ice, Lightning))</h1>
                     </div>
                     <div class="article-body">
-                        <img id=c_image src="image/히어로.webp" alt="히어로">
+                        <img id="c_image" src="image/아크메이지(썬,콜).webp" alt="아크메이지(썬,콜)">
                         <h1 id="title">장점</h1>
                         <p>
-                            <strong>강력한 보스전 성능</strong><br>
-                            보스전에서 화력을 대폭 끌어올리는 인레이지와 자상, 바인드에 걸린 몬스터에게 더 큰 데미지를 주는 찬스 어택, 크리티컬 공격의 피해량을 증가시키는 인사이징
-                            등의 버프로 단일 보스 상대로 강력한 딜을 넣을 수 있다. 5차 스킬 소드 오브 버닝 소울과 콤보 인스팅트는 30레벨 기준 각각 75초, 20초라는 긴 지속시간을
-                            가지고 있는 만큼, 화력의 총량을 엄청나게 끌어올려 히어로가 지속딜링 상위권 안에 들어갈 수 있게 만든다. 인팅-일루전으로 순간 화력을 끌어올릴 경우 10초 극딜
-                            능력도 뛰어나다. 또한 콤보 데스폴트라는 무적시간 1.6초에 재사용 대기시간이 고작 25초밖에 안되는 최상급 무적기를 통해 빠르게 패턴을 회피하고 효율적으로 딜을
-                            넣을 수 있다.
+                            <strong>강력한 극딜</strong><br>
+                            평딜이 강력한 불독과는 완전히 상반된 특징이다. 인피니티를 통한 극딜 증폭 수준이 무시무시해 썬더 브레이크 등 조건만 부합하면 엄청난 극딜량을 보여준다. 무한
+                            인피니티를 유지할 정도로 버프 지속시간 증가 효과를 챙기고, 빙결 중첩을 최대한 누적시킨 상황에서 가하는 극딜 화력은 전직업 중 10위권 안에 든다.
                             <br><br>
-                            <strong>쉽고 간단한 조작 및 운용법</strong><br>
-                            초창기에 나온 직업인만큼 조작 난이도가 매우 단순한데 고유 스킬인 콤보
-                            어택은 온/오프 스킬이라 한번 켜두면 죽지 않는 이상 계속 유지할 수 있고, 평상시에 사용하는 버프 스킬은 스피릿 블레이드, 스카링 소드,
-                            메이플 용사 뿐이라 펫 자동 버프 장착으로 모두 커버가 가능하다. 또한 사냥 주력기, 보스 주력기가 따로 존재하지 않고 레이징 블로우 하나로
-                            통합되어 있기 때문에 어떠한 상황에서든 레이징 블로우를 사용하다가 가끔 다른 스킬을 눌러주면 된다는 점도 조작 난이도를 쉽게 하는 데 일조하고 있다.
+                            <strong>다양한 유틸리티</strong><br>
+                            이동 거리가 긴 텔레포트와 30초 상태이상 방어기, 전이 능력, 5초 쿨다운의 사냥용 설치기, 상대를 느리게 하는 빙결 상태이상과 조건부 무적기, 데미지 감소 및
+                            내성 오라, 번개속성 파티원에 한해 최종 데미지 증가 등 다채로운 유틸리티 기술을 가지고 있다. 여기에 전 직업 행동불능(바인드) 기술 중에서도 행동 불능을 가할 수
+                            있는 시간이 제로의 크리티컬 바인드를 제외하면 가장 긴 무려 13초의 바인드를 가지고 있다. 아쉬운 점이라면 바인드 주기가 180초로 썬콜의 극딜주기인 120초와 안
+                            맞는다는 점이지만 이는 에르다 노바로 충분히 보완할 수 있다.
                             <br><br>
-                            <strong>전직업 최고의 최종 데미지 증가량</strong><br>
-                            히어로의 강력한 딜링 능력은 하늘을 찌르는 최종 데미지 증가량에서 나온다. 기본적으로 웨폰 마스터리와 어드밴스드 콤보를 통해 상시 142%를 확보할 수
-                            있으며, 보스전에서는 인레이지 사용으로 인해 202.5%에 도달할 수 있는데, 이 수치는 영구적으로 얻을 수 있는 가장 높은 수치이다. 여기에 소드 일루전 사용 시
-                            8초 동안 추가로 최종뎀을 끌어올 수 있고, 극딜시 콤보 인스팅트와 오라 웨폰 또한 곱해지기에 실전에서 적용되는 수치는 그야말로 하늘을 찌른다. 반면 이렇게 높은
-                            최종 데미지에 대한 역보정으로 보총 데미지는 매우 낮게 설정되어 있고, 크리티컬 데미지도 높은 편이 아닌데, 이는 다시 말하자면 <strong>높은 투자
-                                효율</strong>로 직결된다. 또한 높은 최종데미지 덕분에 전 직업 중에서도 스탯 공격력이 최상위권에 달하는데, 이는 5차 공용 스킬을 사용할때 장점이
-                            된다. 5차 공용 스킬은 어떤 직업이 사용하든 퍼뎀이 통일되어 있기 때문에 기초 능력치가 뛰어난 직업이 이득을 보게 된다. 히어로는 자력으로 최종 데미지를 최소 2배
-                            이상 끌어올릴 수 있기에 5차 공용 스킬의 효율을 최대한 뽑아낼 수 있다.
+                            <strong>자체 버프 지속시간 증가 보유</strong><br>
+                            모험가 법사류의 공통 장점. 4차 스킬 마스터 매직으로 버프 지속시간 증가 50%를 챙길 수 있어 엔젤릭버스터의 링크 스킬인 소울 컨트랙트를 포함한 각종 버프들의
+                            지속시간을 크게 늘릴 수 있다.
                             <br><br>
-                            <strong>양질의 유틸리티</strong><br>
-                            25초 주기의 무적기인 콤보 데스폴트, 무릉 등에서 공무/공반 보스를 상대할 때 유용한 매직 크래시, 높은 기동성에 한몫하는 플래시 슬래시 등, 불필요하거나 활용하기
-                            까다로운 기능이 일절 없는 알짜배기만 모여있다.
+                            <strong>높은 스탯 공격력</strong><br>
+                            자체 최종 데미지가 높고, 기본 데미지 스탯 보정이 전 직업 중에서도 최고 수준으로 높아 기본적으로 매우 높은편의 스탯 공격력을 보정받을 수 있다. 때문에 사냥
+                            원킬컷 축소에 매우 큰 도움이 되고 스파이더 인 미러나 에르다 샤워, 설치 루시드 소울 등 공용 스킬들의 위력들을 다른 직업보다 높게 끌어올릴수 있다.
+                            <br><br>
+                            <strong>준수한 원킬컷과 편하고 좋은 사냥</strong><br>
+                            위에 서술된 높은 스탯 공격력 보정으로 인한 낮은 사냥 원킬컷, 준수한 기동력, 단순한 패턴의 주력기, 뛰어난 주력 사냥기인 체인 라이트닝과 무려 5개의 광역기를
+                            보유하고 있어 광역기만 돌려써도 편안하게 사냥을 할 수 있다.
+                            <br><br>
+                            <strong>빙결 스택 중첩시 몬스터에게 적용되는 디버프</strong><br>
+                            썬콜 메커니즘 상, 당연하다고 생각하여 대수롭지 않게 생각할 수 있는 점이지만 이도 썬콜만의 장점중의 하나인데, 스우 1페이즈의 로봇 잡몹이나 루시드 2페이즈 같이
+                            수시로 움직이는 몬스터들 상대로는 의외로 썬콜의 빙결 중첩 슬로우가 보스전 생존 및, 딜량을 넣는 것에 많은 도움이 되는 편이다. 보스 몬스터에게 빙결 스택을 쌓아서
+                            추가적인 데미지 피해를 입힐수 있는 것은 덤.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">단점</h1>
                         <p>
-                            <strong>낮은 기본 크리티컬 확률</strong><br>
-                            기본 크리티컬 확률이 전 직업 최저 수치인 <strong>25%</strong>로 찬스 어택으로 20% 올라가는 것밖에 없다. 때문에 200 이전의 육성 중에
-                            낮은 크리티컬 수치로 인해 원킬컷을 맞추기가 매우 까다롭고 데미지 편차가 상당해서 어떤 직업보다도 크리티컬 확률 수급이 절실하다. 또한 보공 및 방무, 공마 수급만
-                            신경쓰면 되는 대부분의 직업과 달리, 히어로는 추가로 크확 수급까지 꾸준히 계산하며 스탯을 조절해야 한다.
+                            <strong>지나치게 높은 데미지 보정</strong><br>
+                            썬콜의 자체 데미지 보정은 빙결 스킬 100%에서 번개 스킬은 최대 160%로 매우 높다. 이 부분은 자본을 투자할수록 유니크 잠재능력 이상에서 등장하는 보스 공격력
+                            증가 효율이 낮다. 보공 대신 마력%를 선택하면 해결할 수 있으나 메이플에서는 보스 공격력 두줄과 공/마 한줄이 정옵으로 여겨져 마력% 위주의 매물은 정옵에 비해
+                            구하기 어렵다. 다만 에디셔널 잠재능력까지 레전더리로 쓰는 속칭 '쌍레둘둘' 세팅부터는 타 캐릭터와 별 차이 없이 보공 2줄이 정옵이다.
+                            <br><br>
+                            <strong>지형에 따라 갈리는 화력</strong><br>
+                            썬콜 딜링의 핵심 스킬인 썬더 브레이크 풀히트의 데미지는 2히트 대비 1.85배, 3히트 대비 1.43배 높기 때문에, 풀히트 유무에 따라 딜 차이가 매우 크다.
+                            따라서 썬더 브레이크를 풀히트시키기 위해서는 보스를 벽에 붙도록 유도해야 한다. 하지만 썬더 브레이크의 사용 주기인 40초마다 보스를 벽으로 유도하기는 대단히
+                            어렵고, 고정형 보스의 경우 더스크처럼 크기가 매우 크지 않은 이상 풀히트시키는 것이 아예 불가능하다. 따라서 보스맵의 지형에 따라 상성이 상당히 갈린다. 스우, 진
+                            힐라 등 보스를 벽에 박아넣기 쉬운 경우 상성이 좋고, 윌 3페이즈나 검은 마법사 2, 4페이즈같이 가운데 고정된 경우 딜링이 상당히 하락한다.
+                            <br><br>
+                            <strong>높은 성장 의존도</strong><br>
+                            썬콜은 기본 데미지를 제외하면 방어율 무시, 크리티컬 확률이 굉장히 낮은 직업이다. 또한 버프 지속 시간 증가, 통칭 벞지를 최대한 끌어와 인피의 성능을 끌어올리는
+                            것이 모험가 마법사 운용 공통 핵심인 만큼, 어빌리티 역시 첫째 줄은 벞지를 무조건 뽑고 시작해야 한다. 특정 스탯에 금방 도달하기 쉽거나 벞지 등은 굳이
+                            챙기지 않아도 되는 타 직업들과 비교하면 필요한 스탯들이 너무 많고, 올려야 하는 수치도 매우 빡빡하다. 그렇기에 이를 보조할 링크, 유니온 등이 전혀 없는 뉴비라면
+                            상당히 진입 장벽이 높게 느껴질 수 있다. 물론 유니온과 어빌리티, 농장 모두 다른 직업도 맞추는 스펙이긴 하지만, 시간을 쌓아가야 하는 스펙업인 만큼 본캐로 모법을
+                            정하고 상위 보스를 목표로 하는 초보자들에게는 다소 불친절한 직업이 될 수는 있다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">사냥 운용</h1>
                         <p>
-                            보스전과 마찬가지로 워리어 리프-레이징 블로우만 쓰고 다녀도 썩 나쁘지 않은 시간당 처치 수를 기록할 수 있지만, 제대로 빌드를 짜서 많은 처치 수를
-                            뽑아내려면 상단 범위가 우월한 인사이징을 함께 사용하면서 오라 블레이드, 레이지 업라이징, 콤보 데스폴트, 소드 일루전, 블리츠 실드, 에르다 파운틴 같은
-                            광범위 공격기도 곁들여주는 것이 좋다.
-                            <br><br>
-                            특히 몇몇 사냥 빌드의 경우 밑점 직후 거의 동시에 레업라를 사용해 레업라의 후딜을 줄이는 일명 '밑점 레업라'가 필수적으로 요구된다. 이 테크닉은 좌우
-                            방향키가 키다운된 상태여야 하고, 입력 타이밍도 상당히 빡빡해 밑점 혹은 레업라만 발동되는 일이 자주 일어난다. 하지만 그만큼 숙달되면 다양한 사냥터에서 사냥
-                            효율이 꽤나 좋아지므로 많은 마릿수의 사냥 빌드를 사용하고 싶다면 익혀두는 것이 좋다.
+                            5차 전직 이전까지는 체인 라이트닝과 프로즌 오브가 주력으로 쓰이며, 이후에는 아이스 에이지와 썬더 브레이크, 스피릿 오브 스노우가 추가된다. 설치기로 썬더 스피어가
+                            있기 때문에 몹이 새기 쉬운 곳에 박아두면 필드 점유율이 높아진다. 텔레포트 마스터리에 하이퍼 스킬을 배정받은 덕분에, 기동성 하나는 여느 텔레포트 마법사보다도
+                            월등하다. 스펙에 조금 신경을 기울여서 아이스 스트라이크로도 원킬컷을 맞출 정도가 되었다면 이쪽을 더 애용하게 된다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">보스전 운용</h1>
                         <p>
-                            쉽고 강하다. 어지간한 스킬들이 죄다 <strong>최종 데미지</strong>에 관여하기도 하고, 조작 난이도도 쉬워서 단순히 공격에만 집중할 수 있어
-                            피로도도 적으며, 무엇보다도 5차 이후 강력한 극딜기와 <strong>무적</strong>을 포함한 유틸기들이 주어지기 때문이다. 따라서 육성 과정을 제외한 자본
-                            투자 대비 효율은 좋다.
+                            <strong>빙결 5중첩</strong>과 석몰이가 핵심이다. 특징 항목에서 서술됐듯, 썬콜의 파괴력은 모3법 공통인 인피니티와
+                            빙결 5중첩의 지속에 크게 의존한다. 그러나 빙결 중첩은 번개 속성 공격을 강화하고 나서 1회씩 소모된다. 고로 칠링 스텝, 프로즌 오브, 엘퀴네스, 아이스 오라,
+                            아이스 에이지, 스피릿 오브 스노우 등 빙결 중첩이 가능한 스킬 중에서도 소환수나 설치형 스킬들을 모두 동원해 5중첩을 유지하는 게 썬콜 보스전의 주된 과제다.
                             <br><br>
-                            평딜은 인레이지를 켜고, 60초 주기로 인사이징 디버프를 먹이면서 콤보 카운터 완충 후 강화된 레이징 블로우+레이지 업라이징으로 무한 공격하면 된다. 특히
-                            30초마다 소드 일루전 → 레이지 업라이징 순서대로 사용하면 소드 일루전의 효과로 순간적으로 최종 데미지가 증가하므로 듀얼블레이드의 블토카퓨 콤보처럼 꾸준히
-                            누킹을 가할 수 있다.
-                            <br><br>
-                            극딜 시에는 상기한 120초 4버프에 추가로 메이플월드 여신의 축복+오라 웨폰(+시드링)를 사용한 뒤 일루전으로 최종뎀 버프를 받고 공용 스킬인 스인미,
-                            크오솔을 쓴 뒤 공간의 상처가 붙은 레이징 블로우를 난사하면 된다.
+                            그리고 구석몰이는 순전히 썬더 브레이크의 효율성 문제와 관련이 있다. 썬브의 낙뢰는 스킬을 사용한 발판이나 지면 혹은 필드의 보이지
+                            않는 벽 끝까지 전진하는 특성이
+                            있기 때문에, 여러 번 떨어지는 썬브의 모든 타격을 한 대상에 집중하기란 쉬운 일이 아니다. 대신 나아갈 수 없으면 낙뢰가 한 자리에 모조리 떨어지므로, 이를 노려
+                            보스 몬스터를 발판 끝이나 벽 쪽으로 유인하연 낙뢰를 한 대상에게 집중할 수 있다. 하지만 실전에서는 보스가 유저 바람대로 호락호락하게 움직이지는 않으므로 말처럼
+                            쉽지 않다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">어빌리티</h1>
                         <p>
-                            <strong>보스 몬스터 공격 시 데미지 증가</strong><br>
-                            속칭 보공. 최종 데미지가 높은 대신 총 데미지가 20~25%밖에 되지 않기 때문에 보공 효율이 좋다.
+                            <strong>버프 지속 시간 증가</strong><br>
+                            인피니티 의존도가 높은 썬콜은 다른 선택지 없이 첫 줄은 무조건 레전더리 옵션을 뽑아야한다.
                             <br><br>
                             <strong>크리티컬 확률 증가</strong><br>
-                            속칭 크확. 히어로는 기본 크확이 25%로 최저치라 크확이 유달리 절실하다. 유니온 8000 이상의 경우, 하이퍼스킬 / 링크 스킬 / 농장 등을 총동원하면
-                            어빌리티 없어도 100% 달성이 불가능한 것은 아니지만, 어빌리티에 크확이 있으면 세팅이 매우 편해진다. 투자할 자본 수준에 따라서는 1번째 줄에 띄워 쓰기도
-                            한다.
+                            썬콜은 자체 크확이 35%로 낮기 때문에 여기서 크확이 나온다면 하이퍼 스텟이나 반지나 유니온이나 링크 스킬중 하나를 아낄 수 있다. 확률이 극악인 게 흠이지만
+                            뽑힌다면 최상옵이다.
                             <br><br>
-                            <strong>상태 이상에 걸린 적 공격 시 데미지 증가</strong><br>
-                            속칭 상추뎀. 스카링 소드의 자상과 인사이징의 디버프가 상태 이상으로 판정되므로, 사실상 추가 보공이라고 봐도 무방하다. 레전드리의 경우 10%밖에 붙지 않아
-                            효과가 윗줄 보공의 절반에 불과하므로, 둘째 줄 아래에서 유니크로 달게 된다.
+                            <strong>아이템 드롭율/메소 획득량 증가</strong><br>
+                            크확이 극악의 확률이기에 다음으로 고려할만한 옵션이다. 메획은 어딜 가져다 놓아도 좋은 옵션이다.
+                            <br><br>
+                            <strong>보스 공격력 증가</strong><br> 크확은 안뜨지만 메획 말고 스펙업이 좋다면 좋은 옵션이다. 보공은 넘쳐서 나쁠게 없다. 보공도 확률은
+                            극악이기에 노려서 뽑기보다는 어쩌다 나와서 사용한다.
                         </p>
                         <br>
                         <br>
                         <h1 id="title">코어강화</h1>
                         <p>
                             <strong>1순위</strong><br>
-                            이징 블로우, 파이널 어택, 레이지 업라이징, 발할라
+                            체인 라이트닝,라이트닝 스피어, 썬더 스피어
                             <br><br>
                             <strong>2순위</strong><br>
-                            인사이징, 오라 블레이드
+                            프로즌 오브, 블리자드, 아이스 스트라이크
                         </p>
                     </div>
                 </article>
